komplette Ausarbeitung mit Abstract und deep-Korrektur

--- a/1 Einleitung.tex
+++ b/1 Einleitung.tex
@@ -6,7 +6,7 @@ Prof. Dr. Friedrich Hacker sagte: \enquote{Jede Aggression sucht sich zu rechtfe
 %entwickelt sich dann in langanhaltende häusliche Gewalt. 
 
 % häusliche Gewalt
-In dieser Arbeit wird die, vom Partner ausgeübte häusliche Gewalt betrachtet. Dies ist dedhalb von besonderem Intersse, weil in der Regel eine emotionale Bindung auf einer besonderen Vertrauenbasis zwischen den Partnern besteht. Um so gravierender ist die Situation des Opfers, wenn die Gewaltausübung von dieser Vertrauenperson ausgeht. In so einem Fall weiß die betroffene Person oftmals nicht, wie sie dieser Situation entkommen kann. Das Zuhause sollte ein Ort von Sicherheit und Geborgenheit sein. Dennoch gibt es viele Fälle, in denen dies nicht der Fall ist. Im Jahr 2020 gab es 148.031 gemeldete Fälle von häuslicher Gewalt \parencite{häusliche_Gewalt}. Die Dunkelziffer ist weit höher, da viele Betroffene keine Anzeige erstatten. Dies gilt besonders für Männern, da das Anzeigeerstatten in höherem Maße schambehaftet ist.
+In dieser Arbeit wird die, vom Partner ausgeübte häusliche Gewalt betrachtet. Dies ist dedhalb von besonderem Intersse, weil in der Regel eine emotionale Bindung auf einer besonderen Vertrauenbasis zwischen den Partnern besteht. Um so gravierender ist die Situation des Opfers, wenn die Gewaltausübung von dieser Vertrauenperson ausgeht. In so einem Fall weiß die betroffene Person oftmals nicht sowie sie dieser Situation entkommen kann. Das Zuhause sollte ein Ort von Sicherheit und Geborgenheit sein. Dennoch gibt es viele Fälle, in denen dies nicht der Fall ist. Im Jahr 2020 gab es 148.031 gemeldete Fälle von häuslicher Gewalt \parencite{häusliche_Gewalt}. Die Dunkelziffer ist weit höher, da viele Betroffene keine Anzeige erstatten. Dies gilt besonders für Männern, da das Anzeigeerstatten in höherem Maße schambehaftet ist.
 
 % Victim Blaming
 Wie Hacker \parencite{Friedrich_Hacker} in seinem Zitat beschrieb, suche der Aggressor sich zu rechtfertigen, er fällt dem \textit{Victim Blaming} zum Opfer. Das bedeutet, dass eine Person die Verantwortung dem Geschädigten zuschreibt. 
@@ -15,7 +15,7 @@ Wie Hacker \parencite{Friedrich_Hacker} in seinem Zitat beschrieb, suche der Agg
 Victim Blaming ist ein großer Aspekt von Gewaltmythen. Trotz jahrelanger Forschung in diesem Gebiet, sind diese Mythen heutzutage noch weit verbreitet. 
 Sie beruhen auf falschen Annahmen der Verantwortung und deuten eine gewisse Einflussnahme des Opfers an.
 
-Diese Studie untersucht die Aggressivität des Beobachters von häuslicher Gewalt und dessen Akzeptanz von Gewaltmythen. Zu Beginn werden die einzelnen Konstrukte häusliche Gewalt, Gewaltmythen und Aggressivität erläutert und der theoretische Hintergrund sowie die daraus abgeleiteten Hypothesen vorgestellt. In den darauffolgenden Kapiteln wird auf die Methoden der Studiendurchführung, wie auch auf die Ergebnisse eingegangen. In der 
+Diese Studie untersucht die Aggressivität des Beobachters von häuslicher Gewalt und dessen Akzeptanz der Mythen häuslicher Gewalt. Zu Beginn werden die einzelnen Konstrukte häusliche Gewalt, Gewaltmythen und Aggressivität erläutert und der theoretische Hintergrund sowie die daraus abgeleiteten Hypothesen vorgestellt. In den darauffolgenden Kapiteln wird auf die Methoden der Studiendurchführung sowie auch auf die Ergebnisse eingegangen. In der 
 abschließenden Diskussion erfolgt eine umfassende Bewertung der Ergebnisse sowie ein Ausblick auf den weiteren Forschungsbedarf in diesen Themengebieten.
 
 Aus Gründen der besseren Lesbarkeit wird in dieser Arbeit die Sprachform des generischen Maskulinums verwendet. An dieser Stelle wird darauf hingewiesen, dass die ausschließliche Verwendung der männlichen Form geschlechtsunabhängig verstanden werden soll.
