--- a/2 Theorie/2.1.1 Aggressivität.tex
+++ b/2 Theorie/2.1.1 Aggressivität.tex
@@ -25,7 +25,7 @@ es als positives und gesundes Verhalten. Wie \textcite{Aggression} zusammenfasst
 Kindes und Jugendlichen notwendig, ein gewisses Maß an Aggressivität zu besitzen. Dies hilf dem Heranwachsenden beim Ausbau von Autonomie und der eigenen Identität. Des Weiteren wird ein gewisser Grad an Aggression im Zusammenhang mit Wettkämpfen oder anderen Arten von Konkurrenz meist sogar erwünscht. Wird die Aggression in die richtige Richtung gelenkt, ist sie die nötige Kraft, um ein gesundes Maß an Selbstbewusstsein, Dominanz und Unabhängigkeit zu erlangen \parencite{Aggression}. Positive Aggression hat viele Formen und Facetten. Ergänzend zu \textcite{positive_aggression} zählt \textcite{jack1999behind} selbst das Streben nach neuen Möglichkeiten und die Verteidigung gegen Schaden als Ausdruck positiver Aggression.
 
 %Aggression nicht gleich Gewalt
-Laut Duden ist Gewalt die \enquote{gegen jemanden, etwas [rücksichtslos] angewendete physische oder psychische Kraft, mit der etwas erreicht werden soll} \parencite{Gewalt_Duden}. Diese Definition ähnelt der der Aggression. Oftmals werden diese Wörter im Sprachgebrauch gleichdeutend verwendet. Sie sind jedoch nicht als Synonyme zu gebrauchen. Die Trennung beider Begriffe ist dennoch nicht einfach. \textcite{Def_Aggressivität_vs_violence} trennt diese beiden Begriffe wie folgt. Aggression ist ein natürlicher und angeborener Instinkt, der nicht ausschließlich dem Menschen zuzuschreiben ist. Gewalt hingegen ist ein von der Kultur bestimmtes Element und Teil der menschlichen Zivilisation. Wie bereits näher gebracht ist die Aggression, wie ihre höhere Instanz die Charaktereigenschaft Aggressivität, von biologischem Ursprung, dessen Ziel und Zweck das Überleben ist \parencite{Def_Aggressivität_vs_violence, Aggression}.
+Laut Duden ist Gewalt die \enquote{gegen jemanden, etwas [rücksichtslos] angewendete physische oder psychische Kraft, mit der etwas erreicht werden soll} \parencite{Gewalt_Duden}. Diese Definition ähnelt der der Aggression. Oftmals werden diese Wörter im Sprachgebrauch gleichdeutend verwendet. Sie sind jedoch nicht als Synonyme zu gebrauchen. Die Trennung beider Begriffe ist dennoch nicht einfach. \textcite{Def_Aggressivität_vs_violence} trennt diese beiden Begriffe wie folgt. Aggression ist ein natürlicher und angeborener Instinkt, der nicht ausschließlich dem Menschen zuzuschreiben ist. Gewalt hingegen ist ein von der Kultur bestimmtes Element und Teil der menschlichen Zivilisation. Wie bereits näher gebracht ist die Aggression sowie ihre höhere Instanz die Charaktereigenschaft Aggressivität, von biologischem Ursprung, dessen Ziel und Zweck das Überleben ist \parencite{Def_Aggressivität_vs_violence, Aggression}.
 Die positiven Aggression von Liu ähnelt der Auffassung von Clark. Letztere weist aber auch darauf hin, dass durch die Beziehungen zu Gewalt die Aggression zu einem soziokulutrellen Aspekt geworden ist \parencite{Def_Aggressivität_vs_violence}.
 Dies kann ein möglicher Grund für die erschwerte Abgrenzung zwischen diesen beiden
 Begriffen sein. 
