--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -1,12 +1,12 @@
 \subsection{Häusliche Gewalt}    \label{subsec_2.1.2}
 % Definition häusliche Gewalt
-Wie in Kapitel ~\ref{subsec_2.1.1} bereits erwähnt, ist der Zweck von Gewalt, Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}. Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht, Macht oder Kontrolle über ein anderes Mitglied zu haben, dann zählt dies zur häuslichen Gewalt. Sowohl in bestehenden, wie auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}. Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}. 
+Wie in Kapitel ~\ref{subsec_2.1.1} bereits erwähnt, ist der Zweck von Gewalt, Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}. Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht, Macht oder Kontrolle über ein anderes Mitglied zu haben, dann zählt dies zur häuslichen Gewalt. Sowohl in bestehenden sowieauch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}. Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}. 
 
-Es lassen sich dabei zwei Muster identifizieren. Ein \textit{spontanes Konfliktverhalten}, oder auch \textit{situative Gewalt} gennant, kann einmalig, aber auch regelmäßig stattfinden und hat die Funktion einer negativen Stressbewältigung. Durch fehlende Ressourcen sehen die gewalttätigen Personen nur Gewalt als einzige Lösung, um ein Konflikt zu lösen. Ein solches Gewaltmuster ist sowohl bei Männern, wie auch bei Frauen zu finden. Das Motiv von Macht und Kontrolle ist jedoch in diesen Fällen nicht ausschlaggebend. Dieses Verhaltensmuster kann sich hingegen in langanhaltendes \textit{systematisches Gewalt- und Kontrollverhalten} verwandeln. Hier haben Macht und Kontrolle eine große Rolle. In diesen Fällen existiert die Absicht den Gegenüber zu kontrollieren und ein langanhaltendes Gefühl von Macht zu verspühren. Dieses Verhalten ist vermehrt bei Männer vorzufinden, die sich in einer ungleichen Beziehung befinden. Um dieses Gefühl von Macht und Kontrolle zu verspüren greifen sie auf entwürdigendes und machtmissbrauchendes Verhalten zurück \parencite{Def_Form_Folge_Gewalt}.
+Es lassen sich dabei zwei Muster identifizieren. Ein \textit{spontanes Konfliktverhalten}, oder auch \textit{situative Gewalt} gennant, kann einmalig, aber auch regelmäßig stattfinden und hat die Funktion einer negativen Stressbewältigung. Durch fehlende Ressourcen sehen die gewalttätigen Personen nur Gewalt als einzige Lösung, um ein Konflikt zu lösen. Ein solches Gewaltmuster ist sowohl bei Männern sowieauch bei Frauen zu finden. Das Motiv von Macht und Kontrolle ist jedoch in diesen Fällen nicht ausschlaggebend. Dieses Verhaltensmuster kann sich hingegen in langanhaltendes \textit{systematisches Gewalt- und Kontrollverhalten} verwandeln. Hier haben Macht und Kontrolle eine große Rolle. In diesen Fällen existiert die Absicht den Gegenüber zu kontrollieren und ein langanhaltendes Gefühl von Macht zu verspühren. Dieses Verhalten ist vermehrt bei Männer vorzufinden, die sich in einer ungleichen Beziehung befinden. Um dieses Gefühl von Macht und Kontrolle zu verspüren greifen sie auf entwürdigendes und machtmissbrauchendes Verhalten zurück \parencite{Def_Form_Folge_Gewalt}.
 
 Gewalt lässt sich in drei Kategorien aufteilen, orientiert an der gewaltausübenden Person. Diese Unterteilungen lassen sich in weitere Subgruppierungen teilen. 
 \begin{enumerate}
-    \item Die \textit{selbstgerichtete Gewalt} beinhaltet suizidales Verhalten, wie Gedanken an Suizid und Versuche dessen, sowie die erfolgreiche Vollendung solcher Versuche. Der zweite Bestandteil dieser Gewalt ist die Selbstmisshandlung \parencite{Gewaltarten_WHO}. 
+    \item Die \textit{selbstgerichtete Gewalt} beinhaltet suizidales Verhalten sowieGedanken an Suizid und Versuche dessen, sowie die erfolgreiche Vollendung solcher Versuche. Der zweite Bestandteil dieser Gewalt ist die Selbstmisshandlung \parencite{Gewaltarten_WHO}. 
     \item Auch die \textit{zwischenmenschliche Gewalt} lässt sich in zwei Unterkategorien aufteilen. Die Gesellschaftsgewalt erfolgt zwischen Personen, die nicht miteinander verwandt sind und die sich möglicherweise nicht kennen und erfolgt demzufolge meist in der Öffentlichkeit. Ein weit bekanntes Beispiel für solche Gewalt ist die Vergewaltigung oder die sexuelle Nötigung durch Fremde. Sie umfasst aber auch zufällige Gewaltausübungen oder die Gewalt innerhalb Institutionen wie der Schule, Arbeit, Gefängnissen oder Alten- und Pflegeheimen. Die zweite Untergruppe, und die im Rahmen dieser Arbeit die Wichtigere, ist die Familien- und speziell die Partnerschaftsgewalt \parencite{Gewaltarten_WHO}. Diese Unterkategorie der interpersonellen Gewalt entspricht der bereits zuvor erwähnten häuslichen Gewalt. Die dabei involvierten Personenkonstellationen können unter anderem Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft. 
     \item Die dritte und letzte Kategorie ist die \textit{kollektive Gewalt}, welche sich in soziale, politische und wirtschaftliche Gewalt unterteilen lässt. Diese Unterkategorien zeigen im Gegensatz zu den vorherigen Kategorien mögliche Gründe für die Gewalt durch Staaten oder großen Gruppen an Einzelpersonen. Das gruppale Hassreden auf sozialen Medien ist ein Beispiel für eine sozial motivierte kollektive Gewalt. Für politische Gewalt ist Krieg ein sehr prominentes Beispiel. Gewalthandlungen größerer Gruppen mit dem Ziel eines wirtschaftlichen Gewinns sind Bestandteil der wirtschaftlichen Gewalt. Gewalthandlungen durch größere Gruppen können stehts mehrere Motive haben \parencite{Gewaltarten_WHO}.
 \end{enumerate}
@@ -23,7 +23,7 @@ In Kapitel ~\ref{subsec_2.1.1} wurde bereits auf die physische Aggression eingeg
 Psychische Gewalt kann durch Worte oder auch durch Gesten und Gesichtsausdrücke erfolgen \parencite{Def_haus_Gewalt_2}. Einige Beispiele für psychische Gewalthandlungen sind Beleidigungen oder Beschimpfungen und die damit einhergehende Demütigung der betroffenen Person. Oftmals beschädigt die gewalttätige Person Eigentum des Opfers oder behandelt dessen Haustiere nicht artgerecht. Es kann auch dazu kommen, dass die Kinder des Opfers genutzt werden, um bei der betroffenen Person Druck auszuüben. Unter psychische Gewalt fallen auch  eifersüchtige Verhaltensweisen, die sich bei der Beendigung einer Beziehung in Stalking umwandeln können \parencite{Def_Form_Folge_Gewalt, Gewaltart, Def_haus_Gewalt_2}. Diese Taten werden verwendet, um das Gegenüber zu manipulieren oder um den eigenen Interssen und Absichten nachzugehen. Sie können auch Verwendung finden, um in böswilliger Absicht das Selbstbewusstsein des Partner zu senken, sodass dieser widerstandslosen Gehorsam zeigt \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt ist nicht so wie die physische Gewalt zwangläufig am Körper sichtbar, ihre negativen Folgen können dennoch tiefer liegen und länger andauern \parencite{psych_Gewalt}. Oftmals ist die psychische Gewalt bloß ein Vorreiter für spätere sexuelle Misshandlungen \parencite{psych_Gewalt_2}. Des Weiteren werden Opfer einer solchen Gewalt von ihrem sozialen Umfeld nicht immer erkannt. Dies kann dazu führen, dass sie an ihrer persönlichen Wahrnehmung zweifeln. Die Reichweite und Intensität der Folgen ist von Person zu Person unterschiedlich und hängt von deren Vorerfahrungen ab. Laut dem \textcite{Def_Form_Folge_Gewalt} zählt die Forschung die soziale und ökonomische Gewalt zu der Psychischen dazu. Im Umfang dieser Arbeit werden diese drei Arten jedoch getrennt betrachtet. 
 
 % sexualisiert Gewalt
-Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen, wie Drohungen oder oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden \parencite{Übergang_psy_zu_sex_Gewalt}. Des Öfteren geben die Betroffenen auf, sich zu wehren und geben den Anforderungen und Wünschen des Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt kann sich in unterschiedlichen sexualisierten Handlungen zeigen, wie die unerwünschte Nähe eines Partners, die Belästigung durch sexuelle Sprüche und Berührungen oder das Darbieten von pornografischen Bildern und Videos. Unter Vergewaltigung wird auch die Nötigung zu sexuellen Handlungen verstanden. Selbst der Versuch fällt unter die sexualisierte Gewalt \parencite{Def_haus_Gewalt_2, Gewaltart, Def_Form_Folge_Gewalt}. Die Zwangsgedanken und das Bedürfnis der Macht sind bei Vergewaltigungen stärker vorhanden, als bei anderen sexuellen Gewalthandlungen. Die ausübende Person ist der Auffassung, dass sie solche Handlungen ausüben muss, damit die Geschlechterhierarchie erhalten bleibe. Sie sind sich demzufolge oftmals ihrer Schuld nicht bewusst \parencite{Def_haus_Gewalt_2}.
+Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen sowieDrohungen oder oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden \parencite{Übergang_psy_zu_sex_Gewalt}. Des Öfteren geben die Betroffenen auf, sich zu wehren und geben den Anforderungen und Wünschen des Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt kann sich in unterschiedlichen sexualisierten Handlungen zeigen, wie die unerwünschte Nähe eines Partners, die Belästigung durch sexuelle Sprüche und Berührungen oder das Darbieten von pornografischen Bildern und Videos. Unter Vergewaltigung wird auch die Nötigung zu sexuellen Handlungen verstanden. Selbst der Versuch fällt unter die sexualisierte Gewalt \parencite{Def_haus_Gewalt_2, Gewaltart, Def_Form_Folge_Gewalt}. Die Zwangsgedanken und das Bedürfnis der Macht sind bei Vergewaltigungen stärker vorhanden, als bei anderen sexuellen Gewalthandlungen. Die ausübende Person ist der Auffassung, dass sie solche Handlungen ausüben muss, damit die Geschlechterhierarchie erhalten bleibe. Sie sind sich demzufolge oftmals ihrer Schuld nicht bewusst \parencite{Def_haus_Gewalt_2}.
 
 % soziale Gewalt
 Die soziale Gewalt wird vom \textcite{Def_Form_Folge_Gewalt} als Bestandteil der psychischen Gewalt angesehen. Auch sie ist körperlich nicht erkennbar. Es erfolgt eine soziale Abkoppelung des Opfers von dessen Umfeld. Der Kontakt zu Freunden oder der Familie wird untersagt und auch das Treffen bekannter Personen ist sowohl außerhalb als auch innerhalb des eigenen Zuhauses untersagt. In manchen Fällen sozialer Gewalt, werden die Telefonate durch den Täter mitgehört. Opfer haben oft nicht die Möglichkeit, alleine das Haus zu verlassen. Sie werden von ihrem Partner zum und vom Arbeitsplatz begleitet \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Manche Opfer distanzieren sich, aufgrund der psychischen Belastungen, selbst von ihrem sozialen Umfeld. Durch den mangelden sozialen Kontakt ist die Hilfeleistung durch das Umfeld eingeschränkt bis garnicht möglich \parencite{Def_haus_Gewalt_2}.
