--- a/2 Theorie/2.2.1 Hypothese 1.tex
+++ b/2 Theorie/2.2.1 Hypothese 1.tex
@@ -1,7 +1,7 @@
 \subsection{Hypothese 1}  \label{subsec_2.2.1}
 In einer Studie mit $N$~=~1177 Universitätsstudenten, hypothetisiertern \textcite{H1_1993}, dass Männer, die in ihrer Vergangenheit sexuelle Aggression zeigten, dazu neigen, Opfern die Veranwortung zuzuschreiben. Mythen über häusliche Gewalt schließen Gewalt sexueller Form ein \parencite{H1_Poli_2022}.Im Rahmen dieser Arbeit wird sexualisierte Gewalt untersucht. Aggressives Agieren in einem Umfeld erhöht die Wahrscheinlichkeit, Aggression und das damit verbundene aggressive Verhalten in anderen Situationen darzustellen. Die Frage ist, ob ein höheres Maß an Aggression allgemein mit Victim Blaming in Verbindung steht.
 
-Die in 2012 durchgeführt Studie von Kassim untersuchte unter anderem die Korrelation zwischen Victim Blaming und dem Anteil an aggressivem Verhalten bei malaysischen Jugendlichen. Sie kam mit einem $r$~=~.29 auf ein hoch signifikantes Ergebnis ($p$~=~.01) \parencite{H1_malasia_2012}. In ihrer theoretischen Aufarbeitung ihrer untersuchten Konstrukte eklärte Kassim, dass das Erleben von häuslicher Gewalt zur Akzeptanz von Gewaltmythen führt. Sie kam zur Erkenntnis, dass nicht nur die Verantwortungszuschreibung auf das Opfer, aber auch das Erleben von häuslicher Gewalt aggressives Verhalten aufklären \parencite{H1_malasia_2012}.
+Die in 2012 durchgeführt Studie von Kassim untersuchte unter anderem die Korrelation zwischen Victim Blaming und dem Anteil an aggressivem Verhalten bei malaysischen Jugendlichen. Sie kam mit einem $r$~=~.29 auf ein hoch signifikantes Ergebnis ($p$~=~.01) \parencite{H1_malasia_2012}. In ihrer theoretischen Aufarbeitung ihrer untersuchten Konstrukte eklärte Kassim, dass das Erleben von häuslicher Gewalt zur Akzeptanz der Mythen häuslicher Gewalt führt. Sie kam zur Erkenntnis, dass nicht nur die Verantwortungszuschreibung auf das Opfer, aber auch das Erleben von häuslicher Gewalt aggressives Verhalten aufklären \parencite{H1_malasia_2012}.
 
 \textcite{H1_moderation_2020} untersuchten in ihrer Studie Aggression, häusliche Gewalt und Toleranz bei pakistanischen arbeitstätigen und verheirateten Frauen. Häusliche Gewalt wurde, wie in dieser vorliegenden Studie, mithilfe der Domestic Violence Myth Acceptance Scale (DVMAS; \textcite{Peters2003}) untersucht. \textcite{H1_moderation_2020} testeten zudem auch die Korrelation der Victim Blaming behandelnden DVMAS$-$Subskalen mit Aggression. Konträr zu \textcite{H1_malasia_2012} kamen sie jedoch zu den Ergebnissen, dass Aggression nicht mit Victim Blaming, im Sinne der Opferbeschuldigung aufgrund des Charakters und des Verhaltens und die Entschuldigung der Täter, korreliert ($r$~=~.04, $r$~=~.13, $r$~=~.11). Im Umfang einer Moderationsanalyse dieser Variablen mit einer Subskala der Toleranz kamen \textcite{H1_moderation_2020} zu dem signifikanten Ergebnis, dass die Interaktion zwischen dieser Subskala und der Opferbeschuldigung aufgrund des Charakters Aggression negativ vorhersagen (\textbeta~=~$-$.225, $p<$ .01). Toreranz scheint das Ausmaß des Victim Blaming bei gegebener Aggression zu mindern.
 
