--- a/2 Theorie/Theorie.tex
+++ b/2 Theorie/Theorie.tex
@@ -13,7 +13,7 @@ Im Anschluss erfolgt in den Unterkapiteln eine Einführung in die einzelnen Kons
 
 % 2.2 Theoretischer Hintergrund: Aktueller Forschungsstand
 \section{Aktueller Forschungsstand}   \label{sec_2.2}
-In dieser Studie wird folgende Frage untersucht: Welchen Zusammenhang gibt es zwischen Aggression und der Akzeptanz von Gewaltmythen, sowie der Tendez zum Victim Blaming? 
+In dieser Studie wird folgende Frage untersucht: Welchen Zusammenhang gibt es zwischen Aggression und der Akzeptanz der Mythen sowie der Tendez zum Victim Blaming? 
 
 In den folgenden drei Unterkapiteln ~\ref{subsec_2.2.1} Hypothese 1, ~\ref{subsec_2.2.2} Hypothese 2 und ~\ref{subsec_2.2.3} Hypothese 3 erfolgt die Herleitung der zu untersuchenden Hypothesen auf Basis bereits bestehender Befunde.
 
