--- a/3 Methode/Methoden.tex
+++ b/3 Methode/Methoden.tex
@@ -20,7 +20,7 @@ Für die Ergebng der Daten wurde neben den Vignetten eine deutsche Übersetzung 
 
 
 \section{Operationalisierung der Konstrukte}    \label{sec_3.3}
-Damit die Teilnehmer unvoreingenommen die, der Wahrheit ähnelten, fiktiven Fallvignetten bewerten konnten, begann der Fragebogen mit zwei zufällig zugeodneten Vignetten, die psychische oder sexualisierte Gewalt behandelten. Darauf folgte die deutsche Version der Skala zur Erfassung der Akzeptanz von Gewaltmythen \parencite{Peters2003}. Im Anschluss befand sich eine umfangreiche Testbatterie mit vier Skalen um physische sowie verbale Aggression, den Ärger und das Misstrauen zu messen \parencite{Aggressionsfragebogen}. Abschließend wurden die soziodemografischen Daten wie Alter, Geschlecht, kultureller Hintergrund, Bildungsstand, berufliche Situation und das Einkommen erfragt.
+Damit die Teilnehmer unvoreingenommen die, der Wahrheit ähnelten, fiktiven Fallvignetten bewerten konnten, begann der Fragebogen mit zwei zufällig zugeodneten Vignetten, die psychische oder sexualisierte Gewalt behandelten. Darauf folgte die deutsche Version der Skala zur Erfassung der Akzeptanz der Mythen häuslicher Gewalt \parencite{Peters2003}. Im Anschluss befand sich eine umfangreiche Testbatterie mit vier Skalen um physische sowie verbale Aggression, den Ärger und das Misstrauen zu messen \parencite{Aggressionsfragebogen}. Abschließend wurden die soziodemografischen Daten wie Alter, Geschlecht, kultureller Hintergrund, Bildungsstand, berufliche Situation und das Einkommen erfragt.
 
 Mithilfe der Fallvignetten zur häuslichen Gewalt wurde die Verantwortungszuschreibung durch den Beobachter erhoben. Insgesamt wurden 16 unterschiedliche Vignetten generiert, um vier verschiedene Variablen messen zu können. Bei diesen Variablen handelte es sich umd die Gewaltart (psychisch oder sexualisiert), das Geschlecht (männlich oder weiblich), den sozioökonomischen Status (hoch oder niedrig) und um den kulturellen Hintergrund (deutsch oder arabisch). Über einen Schiberegler konnten die Probanden die relative Verantwortung von Opfer und Täter bewerten. Die Codierung verlief vom kleinstmöglichen Punktewert auf der linken Seit bis zum größtmöglichen Punktewert auf der rechten Seite (Codierung 1-101). Jeder Proband bekam sowohl eine Vignette sexualisierter sowie einer psychischer Gewalt. Die Ausprägungen der anderen drei Variablen wurden randomisiert zugeteilt.
 Ein Beispiel für eine psychische Gewaltvignette mit arabischem Hintergrund, einem weiblichen Opfer und einem niedrigeren sozioökonomischen Status des Opfers sah wie folgt aus: \enquote{Mustafa arbeitet als Arzt im öffentlichen Krankenhaus. Seine Frau Fatima darf ihm zuhause nicht widersprechen. Sogar in der Öffentlichkeit verbietet Mustafa ihr häufig den Mund. Dadurch sinkt das Selbstwertgefühl von Fatima so weit, dass sie viel im Bett liegt und kaum noch Freude an Freizeitaktivitäten und ihrem 450$-$Euro$-$Job als Kassiererin hat.} 
@@ -38,7 +38,7 @@ Das letzte erhobene Konstrukt Aggression wurde mithilfe des Deutschen Aggression
 Über den Zeitraum vom 04.06.2022 bis 27.06.2022 erstreckte sich die Datenerhebung. Der über SoSci-Survey\textsuperscript{\textregistered} erstellte Fragebogen wurde primär über den Messenger-Dienst WhatsApp\textsuperscript{\textregistered}, aber auch über Instagram\textsuperscript{\textregistered}, Facebook\textsuperscript{\textregistered}, Signal\textsuperscript{\textregistered}, Telegram\textsuperscript{\textregistered} und das Alumniportal Deutschland\textsuperscript{\textregistered} verbreitet, mit der Bitte der Verbreitung, um eine möglichst große Stichprobe zu erreichen. Die Mindeststichprobengröße von 395 wurde mithilfe des kostenlosen Tools G*Power\textsuperscript{\textregistered} ermittelt. %G*Power (https://bjoernwalther.com/eine-kurze-einfuehrung-in-gpower/)
 
 
-Im Einführungstext, zu Beginn der Befragung, wurden Auskünfte über die 15 minütige Bearbeitungszeit, wie auch die garantierte Anonymität der Probanden auserteilt. In der Werbung und im Einführungstext wurden die Begriffe häusliche Gewalt, Gewaltmythen und Gewalt bewust vermieden, um eine Beeinflussung auf die anstehende Verantwortungszuschreibung zu vermeiden. Die Teilnehmer wurden zudem darauf hingewiesen, dass die Teilnahme der Befragung freiwillige sei. Bevor auf die nächste Seite weitergeklickt werden konnte, wurde mithilfe einer zu beantworteten Frage sichergestellt, dass die Person den Einleitungstext verstanden hat und mit der Befragung einverstanden sei. Auf der anschließenden Seite folgte die Aufgabenerklärung für die Fallvignetten, wie eine kleine Aufklärung diesbezüglich. Nach jeder dargebotener Vignette folgten vier Fragen, zur überprüfung der Manipulation. Durch die nachfolgende Frage wurde das Erkennen der Gewaltart überprüft: \enquote{Ging es um sexualisierte Gewalt?}. Die anschließende Frage überprüfte das Geschlecht des Opfers: \enquote{War das Opfer eine Frau?}. Anschließend folgte die Nachfrage nach dem sozioökonomischen Status: \enquote{War die finanzielle Situation des Opfers schlechter als die finanzielle Situation des Täters?}. Zum Schluss wurde die vierte und letzte Variable, der kultuerlle Hintergrund, überprüft: \enquote{Hatten die Personen deutsche Namen?}. Anschließend folgten die deutsche Übersetzung der DVMAS \parencite{Peters2003} und der Deutsche Aggressionsfragebogen \parencite{Aggressionsfragebogen}. Zum Schluss wurden die Probanden gebeten, einige kurze Angaben zu ihrer Person zu machen, woraufhin eine letzte Nachfrage der gewissenhaften Durchführung folgte. Die Probanden konnten noch eine freiwillige Vermutung der zu untersuchten Themen in ein Feld eintragen. Dies bot eine weitere Möglichkeit der Überprüfung der aufmerksamen Bearbeitung der Umfrage durch die Teilnehmer. Damit endete der für die Forschenden wichtige Teil der Befragung. Auf einer daran anschließenden Seite wurden Informationen und Kontaktdaten für Betroffene von häuslicher Gewalt angeboten. 
+Im Einführungstext, zu Beginn der Befragung, wurden Auskünfte über die 15 minütige Bearbeitungszeit sowieauch die garantierte Anonymität der Probanden auserteilt. In der Werbung und im Einführungstext wurden die Begriffe häusliche Gewalt, Gewaltmythen und Gewalt bewust vermieden, um eine Beeinflussung auf die anstehende Verantwortungszuschreibung zu vermeiden. Die Teilnehmer wurden zudem darauf hingewiesen, dass die Teilnahme der Befragung freiwillige sei. Bevor auf die nächste Seite weitergeklickt werden konnte, wurde mithilfe einer zu beantworteten Frage sichergestellt, dass die Person den Einleitungstext verstanden hat und mit der Befragung einverstanden sei. Auf der anschließenden Seite folgte die Aufgabenerklärung für die Fallvignetten sowieeine kleine Aufklärung diesbezüglich. Nach jeder dargebotener Vignette folgten vier Fragen, zur überprüfung der Manipulation. Durch die nachfolgende Frage wurde das Erkennen der Gewaltart überprüft: \enquote{Ging es um sexualisierte Gewalt?}. Die anschließende Frage überprüfte das Geschlecht des Opfers: \enquote{War das Opfer eine Frau?}. Anschließend folgte die Nachfrage nach dem sozioökonomischen Status: \enquote{War die finanzielle Situation des Opfers schlechter als die finanzielle Situation des Täters?}. Zum Schluss wurde die vierte und letzte Variable, der kultuerlle Hintergrund, überprüft: \enquote{Hatten die Personen deutsche Namen?}. Anschließend folgten die deutsche Übersetzung der DVMAS \parencite{Peters2003} und der Deutsche Aggressionsfragebogen \parencite{Aggressionsfragebogen}. Zum Schluss wurden die Probanden gebeten, einige kurze Angaben zu ihrer Person zu machen, woraufhin eine letzte Nachfrage der gewissenhaften Durchführung folgte. Die Probanden konnten noch eine freiwillige Vermutung der zu untersuchten Themen in ein Feld eintragen. Dies bot eine weitere Möglichkeit der Überprüfung der aufmerksamen Bearbeitung der Umfrage durch die Teilnehmer. Damit endete der für die Forschenden wichtige Teil der Befragung. Auf einer daran anschließenden Seite wurden Informationen und Kontaktdaten für Betroffene von häuslicher Gewalt angeboten. 
 
 Mit Abschließen der Befragung wurden die Probanden, die über das SONA-System kamen, wieder dorthin zurückgeführt und ihnen wurden 0.25 Versuchspersonenstunden angerechnet.
 
@@ -50,12 +50,12 @@ Der erhobene Datensatz wurde mithilfe der Statistik- und Analysesoftware SPSS\te
 
 Anschließend konnten die Daten ausgewertet werden, beginnend mit den deskriptiven Kennzahlen der drei Konstrukte. Anhand der Lageparameter, der Maße der Streuung und der Verteilung konnten die demographischen Daten der Stichprobe ausgewertet werden.
 
-Damit die Fallvignetten wie auch der Aggressionsfragebogen für die Berechnungen genutzt werden konnten, mussten jeweils einige Items umgepolt werden. Damit bei den Vignetten der betroffenen Person stets der Zahlenwert 101 (Schieberegler rechts) zugeodnet werden konnte, wurden jeweils bei den psychischen und sexualisierten Vignetten drei Fälle umkodiert. Ferner beinhalteten die Vignetten weitere Variablen, die für die Auswertung bei dieser Arbeit, wie auch bei den Auswertungen der weiteren Projektmitglieder wichtig waren. Für die individuelle Verwendung der Variablen wurden sie aus den entsprechenden Fallvignetten extrahiert und jeweils zu einer separaten dummy-kodierten Variable dichotomisiert. Beim Aggressionsfragebogen wurden Item 14 \enquote{Ich bin eine ausgeglichene Person.} und Item 22 \enquote{Ich kann mir keinen Grund vorstellen, weshalb ich jemals eine andere Person schlagen würde.} umgepolt.
+Damit die Fallvignetten wie auch der Aggressionsfragebogen für die Berechnungen genutzt werden konnten, mussten jeweils einige Items umgepolt werden. Damit bei den Vignetten der betroffenen Person stets der Zahlenwert 101 (Schieberegler rechts) zugeodnet werden konnte, wurden jeweils bei den psychischen und sexualisierten Vignetten drei Fälle umkodiert. Ferner beinhalteten die Vignetten weitere Variablen, die für die Auswertung bei dieser Arbeit sowieauch bei den Auswertungen der weiteren Projektmitglieder wichtig waren. Für die individuelle Verwendung der Variablen wurden sie aus den entsprechenden Fallvignetten extrahiert und jeweils zu einer separaten dummy-kodierten Variable dichotomisiert. Beim Aggressionsfragebogen wurden Item 14 \enquote{Ich bin eine ausgeglichene Person.} und Item 22 \enquote{Ich kann mir keinen Grund vorstellen, weshalb ich jemals eine andere Person schlagen würde.} umgepolt.
 
-Die in Kapitel ~\ref{sec_3.4} bereits erwähnten Manipulationschecks wurden mithilfe des Chi$^2$-Tests berechnet.
+Die in Kapitel ~\ref{sec_3.4} bereits erwähnten Manipulationschecks wurden mithilfe des Chi$^2$-Tests berechnet. Die Voraussetzungen für diesen Test sind die Nominalskalierung beider Variablen, die Unabhängigkeit der Messung sowie mindestens fünf Beobachtungen pro Zelle. 
 
 Die erste Hypothese (H1) wurde mit der Spearman$-$Rang$-$Korrelation berechnet. Die H1 untersuchte eine positive Korrelationen zwischen dem metrischen Aggressionsscore und der metrischen Verantwortungszuschreibung auf das Opfer. Neben der mindestens ordinalen Skalierung der Variablen, setzt die Spearman$-$Rang$-$Korrelation eine paarweise Beobachtung voraus.  
 
-Für die zweite Hypothese (H2) wurde eine Pearson$-$Produkt$-$Moment$-$Korrelationen gerechnet. Die Korrelationsrechnung der H2 diente der Überprüfung der angenommenen positiven Korrelation des metrischen Aggressionsscores mit der metrischen Akzeptanz von Gewaltmythen. Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation sind die Intervallskalierung oder Dichotomie beider Variablen, eine bestehende Linearität, die Abwesenheit von Ausreißern, sowie die Endlichkeit der Varianz beziehungsweise Kovarianz.
+Für die zweite Hypothese (H2) wurde eine Pearson$-$Produkt$-$Moment$-$Korrelationen gerechnet. Die Korrelationsrechnung der H2 diente der Überprüfung der angenommenen positiven Korrelation des metrischen Aggressionsscores mit der metrischen Akzeptanz der Mythen häuslicher Gewalt. Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation sind die Intervallskalierung oder Dichotomie beider Variablen, eine bestehende Linearität, die Abwesenheit von Ausreißern, sowie die Endlichkeit der Varianz beziehungsweise Kovarianz.
 
-Bei der dritten Hypothese (H3) handelte es sich um eine Moderationsanalyse, die mithilfe des Plug-in PROCESS\textsuperscript{\textregistered} berechnet wurde. Bei dieser Hypothese wurde untersucht, ob das Geschlecht den Zusammenhang zwischen Aggression und Akzeptanz von Gewaltmythen moderiert. Die allgemeinen Vorraussetzung für diesen Test sind die Linearität und der Stichprobenumfang. Des Weiteren gibt es spezifische Voraussetzungen. Eine gegebene Homoskedastizität, Normalverteilung des Fehlers, keine Autokorrelation und keine Multikolinearität müssen gegeben sein.
+Bei der dritten Hypothese (H3) handelte es sich um eine Moderationsanalyse, die mithilfe des Plug-in PROCESS\textsuperscript{\textregistered} berechnet wurde. Bei dieser Hypothese wurde untersucht, ob das Geschlecht den Zusammenhang zwischen Aggression und Akzeptanz der Mythen häuslicher Gewalt moderiert. Die allgemeinen Vorraussetzung für diesen Test sind die Linearität und der Stichprobenumfang. Des Weiteren gibt es spezifische Voraussetzungen. Eine gegebene Homoskedastizität, Normalverteilung des Fehlers, keine Autokorrelation und keine Multikolinearität müssen gegeben sein. 
