--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -1,99 +1,98 @@
 \chapter{Ergebnisse}   \label{ch_4}
 Im folgenden Kapitel werden die durchgeführten statistischen Berechnungen dargestellt. Zu Beginn werden die deskriptiven Ergebnisse beschrieben und mit den Normwerten verglichen, woraufhin die statistische Überprüfung der Manipulation folgt. Im inferenzstatistischen Unterkapitel wird mit der Prüfung der Vorraussetzung der einzelnen Test mathematisch dargestellt und abschließend werden die Ergebnisse der drei Hypothesen präsentiert. Die ausführliche Interpretation der Ergebnisse geschieht im nachkommenden Kapitel ~\ref{ch_5}. 
-Wie zuvor erklärt, musste der Datensatz verdoppelt werden, um eine Berechnung mit den Daten gewährleisten zu können. Aus diesem Grund wird in diesem und den nachfolgenden Kapiteln von einer Stichprobengröße von $N_{neu}$~=~864 ausgegangen.
+Wie zuvor erklärt, musste der Datensatz verdoppelt werden, um eine Berechnung mit den Daten gewährleisten zu können. Aus diesem Grund wird in diesem und dem nachfolgendem Kapitel von einer Stichprobengröße von $N_{neu}$~=~864 ausgegangen.
 
 \section{Deskriptive Ergebnisse}    \label{sec_4.1}
-Die Fallvignetten wießen, bei einem $Min$~=~1 und einem $Max$~=~101, einen Mittelwert von $M$~=~26.46 ($SD$~=~27.98) auf. Der Median lag bei $Mdn$~=~19. Die am häufigsten verteilten Werte liegen an den beiden Extremen bei 1.00 und 101.00 und bilden eine bimodale Verteilung. Bei einer Schiefe von 1.17 und Kurtosis von 0.53, liegt eine rechstschiefe beziehungsweise. linkssteile und steilgipflige Verteilung vor. Abbildung~\ref{Histogramm VicBlame} stellt die unimodale Verteilung der Verantwortungszuschreibung bildlich da. Die vorhandenen Ausreißer befinden sich alle unter der Ausscheidungsgrenze.
+Die Fallvignetten wießen, bei einem $Min$~=~1 und einem $Max$~=~101, einen Mittelwert von $M$~=~26.46 ($SD$~=~27.98) auf. Der Median lag bei $Mdn$~=~19. Die am häufigsten verteilten Werte liegen an den beiden Extremen bei 1.00 und 101.00 und bilden eine bimodale Verteilung. Bei einer Schiefe von 1.17 und Kurtosis von 0.53, liegt eine rechstschiefe beziehungsweise linkssteile und steilgipflige Verteilung vor. Abbildung~\ref{Histogramm VicBlame} stellt die Verteilung der Verantwortungszuschreibung bildlich da. Die vorhandenen Ausreißer befinden sich alle unter der Ausscheidungsgrenze.
 % Modus: 1.00 und 101.00
 \input{4 Ergebnisse/Histogramm Vignetten.tex}
 
-Der DVMAS zeigte einen Mittelwert von $M$~=~2.60 ($SD$~=~0.80) und einen Median von $Mdn$~=~2.5. Der geringste Wert war dabei $Min$~=~1 und der höchsete $Max$~=~5.56. Die häufigsten Werte lagen bei 2.11 und 2.67 und bilden eine bimodale Verteilung. Eine Schiefe von 0.60 bildet eine leicht rechstschiefe Verteilung. Die Kurtosis von 0.09 bildet eine leicht steilere Verteilung, als die Normalverteilung. Beide Werte weichen demzufolge leicht von einer Normalverteilung ab ($M$~=~2.30, $SD$~=~0.85 und Schiefe~=~0.63). 
+Der DVMAS zeigte einen Mittelwert von $M$~=~2.60 ($SD$~=~0.80) und einen Median von $Mdn$~=~2.5. Der geringste Wert war dabei $Min$~=~1 und der höchsete $Max$~=~5.56. Die häufigsten Werte lagen bei 2.11 und 2.67 und bilden eine bimodale Verteilung. Eine Schiefe von 0.60 bildet eine leicht rechstschiefe Verteilung. Die Kurtosis von 0.09 bildet eine leicht steilere Verteilung, als die Normalverteilung. Beide Werte weichen demzufolge leicht von den Normwerten ab ($M$~=~2.30, $SD$~=~0.85 und Schiefe~=~0.63) \parencite{DVMAS_Peters}. 
 Die Abbildung~\ref{Histogramm DVMAS} bildet die beschriebenen Werte dieser Studie bildlich ab. Die vorhandenen Ausreißer befinden sich alle unter der Ausscheidungsgrenze.
 % Modus: 2.11, 2.67
 \input{4 Ergebnisse/Histogramm DVMAS.tex}
 
 \input{4 Ergebnisse/Histogramm AggroFB.tex}
-Beim Deutschen Aggressionsfragebogen wurde ein Mittelwert von $M$~=~1.88 ($SD$~=~0.43) und ein Median von $Mdn$~=~1.79 berechnet. Der geringste angegebene Wert betrug $Min$~=~1.10 und der höchste $Max$~=~3.52. Die Verteilung wies einen Schiefe von 0.94 und eine Kurtosis von 0.88 auf. Demzufolge ist die Verteilung rechstschiefe und hat eine breitgipflige Form, sowie eine Multimodalität mit den Modiwerten bei 1.59, 1.62, 2.52 und 2.55. Die Lageparameter weichen stark von den Normwerten ab. Diese sind wie folgt: $M$~=~2.66 ($SD$~=~0.88), Schiefe~=~3.81 und eine Kurtosis von -0.06. In Abbildung~\ref{Histogramm AggroFB} ist eine bildliche Darstellung der erhobenen Verteilung zu sehen. Die vorhandenen Ausreißer befinden sich alle unter der Ausscheidungsgrenze.
+Beim Deutschen Aggressionsfragebogen wurde ein Mittelwert von $M$~=~1.88 ($SD$~=~0.43) und ein Median von $Mdn$~=~1.79 berechnet. Der geringste angegebene Wert betrug $Min$~=~1.10 und der höchste $Max$~=~3.52. Die Verteilung wies eine Schiefe von 0.94 und eine Kurtosis von 0.88 auf. Demzufolge ist die Verteilung rechstschiefe und hat eine breitgipflige Form, sowie eine Multimodalität mit den Modiwerten bei 1.59, 1.62, 2.52 und 2.55. Die Lageparameter weichen stark von den Normwerten ab. Diese sind wie folgt: $M$~=~2.66 ($SD$~=~0.88), Schiefe~=~3.81 und eine Kurtosis von -0.06 \parencite{Aggressionsfragebogen}. In Abbildung~\ref{Histogramm AggroFB} ist eine bildliche Darstellung der erhobenen Verteilung zu sehen. Die vorhandenen Ausreißer befinden sich alle unter der Ausscheidungsgrenze.
 % Modus: 1.59, 1.62, 2.52, 2.55
 
 
-\section{Inferenzstatistische Ergebnisse}    \label{sec_4.2}
-Anschließend erfolgt eine inferenzstatistische Analyse der erhobenen Daten zur Fesstellung der Korrelationen zwischen den in Kapitel~\ref{ch_2} näher gebrachten Konstrukte Aggression, Akzeptanz der Gewaltmythen und die Verantwortungszuschreibung. 
+\section{Manipulationscheck}    \label{sec_4.2}
+Nachfolgend werden die Ergebnisse der vier Manipulationschecks in der folgenden Reihenfolge aufgeführt: Gewaltart, Geschlecht des Opfers, sozioökonomischer Status der betroffenen Person und abschließend der kulturelle Hintergrund.
+Die in Kapitel ~\ref{sec_3.5} erwähnten Voraussetzungen der Nominalskalierung beider Variablen und die Unabhängigkeit der Messung sind gegeben. Des Weiteren waren weit mehr als fünf Beobachtungen pro Zelle gegeben.
+
+% griechischer Buchstabe = phi (V-Wert = phi nur mit minus)
+% Gewaltart x²(1) = 485,52, p < .001, V = .75, Täter*innen-Geschlecht x²(1) = 748,16, p < .001, φ = .93, Sozio-ökonomischer Status x²(1) = 422,37, p < .001, φ = .70 und kultureller Status x²(1) = 789,68, p < .001, V = .96
+
+\input{4 Ergebnisse/Tabelle Manipulationscheck.tex}
+\input{4 Ergebnisse/Tabelle Kreuztabelle Geschlecht.tex}
+Bei der Überprüfung der Gewaltart gaben bei Vignetten sexualisierter Gewalt 354 Personen (91.70\%) an, eine solche Vignette behandelt zu haben. Wenn es sich um eine psychische Gewaltart handelte, dann reichten 400 Personen (83.70\%) die richtige Antwort ein. Der durchgeführte Chi$^2$-Test viel mit einem Wert von $\chi^2$~=~485.53 signifikant aus ($\phi$~=~$-$.75, $p<$.001). 
+In Tabelle~\ref{KT_G} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
+
+Wenn die Nachfrage auf das Geschlecht des Opfers gerichtet war, dann gaben 411 (96.70\%) bzw. 423 (96.40\%) Probanden an, dass es sich um ein weibliches bzw. männliches Opfer handelte. Auch dieser Chi$^2$-Test war mit einem Wert von $\chi^2$~=~748.16 hoch signifikant ($\phi$~=~.93, $p<$.001). 
+In Tabelle~\ref{KT_sex} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
+
+Die Überprüfung des niedrigen sozioökonomischen Status des Opfers wurde bei dessen Gegebenheit von 389 (80.2\%) richtig beanwortet. Bei der gegenteiligen Situation stieg die Rate der richtigen Antworten auf 342 (90.20\%). Mit einem Wert von $\chi^2$~=~422.37 fiel dieser Chi$^2$-Test ebenfalls signifikant aus ($\phi$~=~.70, $p<$.001). 
+In Tabelle~\ref{KT_SES} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
+\input{4 Ergebnisse/Tabelle KT SES.tex}
+
+\input{4 Ergebnisse/Tabelle KT kult.tex}
+Die höchste Rate an korrekten Antworten gab es bei dem Manipulationscheck des kulturellen Status. Hier gaben 422 (97.70\%) Personen bzw. 423 (97.90\%) die richtige Antwort. Auch dieser Chi$^2$-Test ist mit einem Wert von $\chi^2$~=~789.68 signifikant ($\phi$~=~$-$.96, $p<$.001). 
+In Tabelle~\ref{KT_kult} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
+
+Bei der Kontrollfrage gaben vier Personen an, nicht sinnvolle Angaben hinterlegt zu haben. Da es statistisch keinen Unterschied gab, ob sie ausgeschlossen werden oder nicht, verblieben sie im Datensatz.
 
 
-\subsection{Hypothese 1}    \label{subsec_4.2.1}
-Die Hypothese 1 geht von einer Korrelation des Aggressionsscores mit Victim Blaming aus. Diese ungerichtete Zusammenhangshypothese wurde mit der Spearman$-$Rang$-$Korrelation berechnet. Die in Kapitel ~\ref{sec_3.5} erwähnten Voraussetzungen der Ordinalität beider Variablen wie auch die paarweise Beobachtungen sind gegeben. Eine gepaarte Beobachtung entspricht einer gemessenen Variable pro Spalte bei SPSS.
+
+\section{Inferenzstatistische Ergebnisse}    \label{sec_4.3}
+Anschließend erfolgt eine inferenzstatistische Analyse der erhobenen Daten zur Fesstellung der Korrelationen zwischen den in Kapitel~\ref{ch_2} näher gebrachten Konstrukten Aggression, der Verantwortungszuschreibung und Akzeptanz der Gewaltmythen. 
+
+
+\subsection{Hypothese 1}    \label{subsec_4.3.1}
+Die H1 geht von einer Korrelation des Aggressionsscores mit Victim Blaming aus. Diese ungerichtete Zusammenhangshypothese wurde mit der Spearman$-$Rang$-$Korrelation berechnet. Die in Kapitel ~\ref{sec_3.5} erwähnten Voraussetzungen der Ordinalität beider Variablen sowie auch die paarweise Beobachtungen sind gegeben. Eine gepaarte Beobachtung entspricht einer gemessenen Variable pro Spalte bei SPSS\textsuperscript{\textregistered}.
 \input{4 Ergebnisse/Tabelle H1 Spearman.tex}
 
-Das in Tabelle~\ref{H1_Spearman} ersichtliche Ergebnis der Spearman$-$Rang$-$Korrelation fiel nicht signifikant aus ($p$~=~n.s.). Mit dem sehr kleinen Effekt \parencite{Cohen_1992} von $r_{s}$~=~.18, korreliert die Aggression nur sehr gering mit der Verantwortungszuschreibung auf das Opfer.
+Das in Tabelle~\ref{H1_Spearman} ersichtliche Ergebnis der Spearman$-$Rang$-$Korrelation fiel nicht signifikant aus ($p$~=~n.s.). Die Aggression korrelierte mit dem sehr kleinen Effekt \parencite{Cohen_1992} von $r_{s}$~=~.18 nur sehr gering mit der Verantwortungszuschreibung auf das Opfer.
 
-\subsection{Hypothese 2}    \label{subsec_4.2.2}
-Die Voraussetzung einer Pearson$-$Produkt$-$Moment$-$Korrelation wurden in ~\ref{sec_3.5} bereits aufgeführt. In diesem Falle sind auch alle Voraussetzungen gegeben: Aggression und die Akzeptanz von Gewaltmythen sind metrisch, die vorhandenen Ausreißer sind im akzeptablen Bereich (siehe \hyperref[Boxplot_AggroFB]{Anhang A} und \hyperref[Boxplot_DVMAS]{Anhang B}), 
-es liegt ein linearer Zusamenhang zwischen den Variablen vor (siehe \hyperref[Linearitat_AggroFB_DVMAS]{Anhang C}) und eine bivariate Normalverteilung ist auch gegeben, da der Bootstrap$-$Konfidenzintervall (.308 $-$ .442) die Null nicht einbezieht.
+\subsection{Hypothese 2}    \label{subsec_4.3.2}
+Die Voraussetzung einer Pearson$-$Produkt$-$Moment$-$Korrelation wurden in ~\ref{sec_3.5} bereits aufgeführt. In diesem Falle waren alle Voraussetzungen gegeben: Aggression und die Akzeptanz der Mythen häuslicher Gewalt waren metrisch, die vorhandenen Ausreißer waren im akzeptablen Bereich (siehe \hyperref[Boxplot_AggroFB]{Anhang A} und \hyperref[Boxplot_DVMAS]{Anhang B}), 
+es lag ein linearer Zusamenhang zwischen den Variablen vor (siehe \hyperref[Linearitat_AggroFB_DVMAS]{Anhang C}) und eine bivariate Normalverteilung war ebenfalls gegeben, da das Bootstrap$-$Konfidenzintervall (.308 $-$ .442) die Null nicht einbezog.
 
 Die in Tabelle~\ref{H2_Pearson} ersichtliche Pearson$-$Produkt$-$Moment$-$Korrelation zeigte einen Zusammenhang von $r$~=~.38. Nach \textcite{Cohen_1992} entspricht dies einer mittelgroßen Korrelation, die bei einseitiger Testung statistisch signifikant ausfiel ($p<$ .001).
 \input{4 Ergebnisse/Tabelle H2 Pearson.tex}
 
 
-\subsection{Hypothese 3}    \label{subsec_4.2.3}
-Um die vermutete Moderation des biologischen Geschelchts auf den Zusammenhang zwischen Aggressio und dem DVMAS zu testen, wurde eine Moderationsanalyse durchgeführt. Die Variablen weisen eine lineare Beziehung (siehe \hyperref[Linearitat_sex_DVMAS]{Anhang D}) und eine Unabhängigkeit, durch die nicht verbundene Erhebung der einzelnen Variablen, auf. Durch die mit $N_{neu}$~=~864 großen Stichprobe, kann von einer Normalverteilung der Residuen ausgegangen werden. Die Überprüfung der Homoskedastizität mithilfe des White$-$Tests ergab eine signifikantes Ergebnis ($p$~=~.03). Somit liegt eine Heteroskedastizität vor. 
+\subsection{Hypothese 3}    \label{subsec_4.3.3}
+Um die vermutete Moderation des biologischen Geschelchts auf den Zusammenhang zwischen Aggressio und dem DVMAS zu testen, wurde eine Moderationsanalyse durchgeführt. Die Variablen weisen eine lineare Beziehung (siehe \hyperref[Linearitat_sex_DVMAS]{Anhang D}) und eine Unabhängigkeit durch die nicht verbundene Erhebung der einzelnen Variablen auf. Durch die, mit $N_{neu}$~=~864, großen Stichprobe konnte von einer Normalverteilung der Residuen ausgegangen werden. Die Überprüfung der Homoskedastizität ergab mithilfe des White$-$Tests ein signifikantes Ergebnis ($p$~=~.03). Somit lag eine Heteroskedastizität vor. 
 
 \input{4 Ergebnisse/Tabelle Moderation.tex}
-Das Gesamtmodell war, wie in Tabelle~\ref{Moderationsanalyse} demonstriert, mit einer Varianzaufklärung von 16.34\% signifikant ($F$(3, 856)~=~50.30, $p<$ .001). Die Moderationsanalyse konnte jedoch keinen signifikanten Moderationseffekt finden, $\Delta R^{2}$~=~0.12\%, F(1, 860)~=~1.12, $p$~=~.290, 95\% CI[-0.39, 0.12]. Dennoch klärt das Modell 16.34\% der Varianz des deutschen DVMAS auf.
+Das Gesamtmodell war, wie in Tabelle~\ref{Moderationsanalyse} demonstriert, mit einer Varianzaufklärung von 16.34\% signifikant ($F$(3, 856)~=~50.30, $p<$ .001). Die Moderationsanalyse konnte jedoch keinen signifikanten Moderationseffekt finden, $\Delta R^{2}$~=~0.12\%, F(1, 860)~=~1.12, $p$~=~.29, 95\% CI[-0.39, 0.12]. Dennoch klärte das Modell 16.34\% der Varianz des deutschen DVMAS auf.
 %Modell: $R^{2}$~=~16.34\%, $F$(HC3)~=~50.30, $df1$~=~1, $df2$~=~856 $p<$~.001
 %W*X: $\Delta R^{2}$~=~0.08, $F$(HC3)~=~0.76, $df1$~=~1, $df2$~=~856 $p$~=~.384
 
 \input{4 Ergebnisse/Tabelle Haupteffekte.tex}
-Den Entfehlungen von \textcite{Moderation_SPSS} folgend, wurde der Interaktionsterm herausgenommen. Dies führte zu einem neuen Modell mit Haupteffekten, welche in Tabelle~\ref{Haupteffekte} zusammengefasst wurden. Die Beziehung zwischen Geschlecht ($B$~=~$-$.23, $p<$~.001), wie auch zwische Aggression ($B$~=~.69, $p<$~.001) und der Akzeptanz von Gewaltmythen fiel signifikant aus. 
+Den Entfehlungen von \textcite{Moderation_SPSS} folgend, wurde der Interaktionsterm herausgenommen. Dies führte zu einem neuen Modell mit Haupteffekten, welche in Tabelle~\ref{Haupteffekte} zusammengefasst wurden. Die Beziehung zwischen Geschlecht ($B$~=~$-$.23, $p<$~.001) sowie auch zwischen Aggression ($B$~=~.69, $p<$~.001) und der Akzeptanz der Mythen häuslicher Gewalt fiel signifikant aus. 
 %Geschlecht: $B$~=~$-$.23, $(SE)B$~=~0.06, $\beta$~=~$-$.13, $t$~=~$-$4.191, $p<$~.001
 %Aggression: $B$~=~.69, $(SE)B$~=~0.06, $\beta$~=~.37, $t$~=~11.842, $p<$~.001
 
 
-\section{Manipulationscheck}    \label{sec_4.3}
-Nachfolgend werden die Ergebnisse der vier Manipulationschecks in der folgenden Reihenfolge aufgeführt: Gewaltart, Geschlecht des Opfers, soziökonomischer Status der betroffenen Person und abschließend der Kulturelle Hintergrund.
-
-% griechischer Buchstabe = phi (V-Wert = phi nur mit minus)
-% Gewaltart x²(1) = 485,52, p < .001, V = .75, Täter*innen-Geschlecht x²(1) = 748,16, p < .001, φ = .93, Sozio-ökonomischer Status x²(1) = 422,37, p < .001, φ = .70 und kultureller Status x²(1) = 789,68, p < .001, V = .96
-
-
-\input{4 Ergebnisse/Tabelle Manipulationscheck.tex}
-\input{4 Ergebnisse/Tabelle Kreuztabelle Geschlecht.tex}
-Bei der Überprüfung der Gewaltart gaben bei Vignetten sexualisierter Gewalt 354 Personen (91.70\%) an eine solche Gewaltart behandelt zu haben. Handelte es sich um eine psychische Gewaltart an, reichten nur 400 Personen (83.70\%) die richtige Antwort ein. Der durchgeführte Chi$^2$-Test viel mit einem Wert von 485.53 signifikant aus ($p<$.001). 
-In Tabelle~\ref{KT_G} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
-
-War die Nachfrage auf das Geschlecht des Opfers gerichtet gaben die 411 (96.70\%) bzw. 423 (96.40\%) Probanden an, es handelte sich um ein weibliches bzw. männliches Opfer. Auch dieser Chi$^2$-Test war mit einem Wert von 748.16 hoch signifikant ($p<$.001). 
-In Tabelle~\ref{KT_sex} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
-
-Die Überprüfung des niedrigen soziökonomischen Status des Opfers wurde von 389 (80.2\%) bei dessen Gegebenheit richtig beanwortet. Bei der gegenteiligen Situation stieg die Rate der richtigen Antworten auf 342 (90.20\%). Mit einem Wert von 422.37 fiel dieser Chi$^2$-Test ebenfalls signifikant aus ($p<$.001). 
-In Tabelle~\ref{KT_SES} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
-\input{4 Ergebnisse/Tabelle KT SES.tex}
-
-\input{4 Ergebnisse/Tabelle KT kult.tex}
-Die höchste Rate an Richtigkeit gab es bei dem Manipulationscheck des kulturellen Status. Hier gaben 422 (97.70\%) Personen bzw. 423 (97.90\%) die richtige Antwort. Auch dieser Chi$^2$-Test ist mit einem Wert von 789.68 signifikant ($p<$.001). 
-In Tabelle~\ref{KT_kult} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
-
-Bei der Kontrollfrage gaben vier Personen an, nicht sinnvolle Angaben hinterlegt zu haben. Da es statistisch keinen unterschied gibt, ob sie ausgeschlossen werden oder nicht, verblieben sie im Datensatz.
-
-
 \section{Explorative Ergebnisse}    \label{sec_4.4}
-Zusätzlich zu den untersuchten Hypothesen wurden noch weitere explorative Untersuchungen getätigt. In Kapitel~\ref{subsec_4.4.1} wurde getestet, ob die Subskalen von Aggression positiv untereinander und mit dem DVMAS korreliert. 
+Zusätzlich zu den untersuchten Hypothesen wurden noch weitere explorative Untersuchungen getätigt. Es wurde getestet, ob die Subskalen von Aggression positiv untereinander, mit dem DVMAS und Victim Blaming korrelierten. 
 
 %Des Weiteren wurde Aggression mit dem kultuerllen Hintergrund der Probanden (vgl. Kapitel~\ref{subsec_4.4.2}) korreliert. Der Deutsche Aggressionsfragebogen unterlief zwei Unterschiedtestungen. In Kapitel~\ref{subsec_4.4.3} wurde exploriert, ob sich die Aggressionsausprägung zwischen den kulturellen Hintergründen unterscheidet und in Kapitel~\ref{subsec_4.4.4} mit den biologischen Geschlechtern der Probanden.
 
+Für die Korrelation zwischen den vier Aggression-Subskalen physische und verbale Aggression, Ärger und Misstrauen und der Verantwortungszuschreibung auf das Opfer sowie der Akzeptanz der Mythen häuslicher Gewalt wurde eine Spearman$-$Rang$-$Korrelation berechnet. Trotz der metrischen Skaleniveaus aller Variablen und die Erfüllung weiterer Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation musste, aufgrund der Ausreißer der Subskala physische Aggression (siehe \hyperref[Boxplot_phAggro]{Anhang E}), die Spearman$-$Rang$-$Korrelation herangezogen werden.
 
-\subsection{Korrelation Aggresion-Subskalen mit DVMAS und Victim Blaming}  \label{subsec_4.4.1}
-Für die Korrelation zwischen den vier Aggression-Subskalen physische und verbale Aggression, Ärger und Misstrauen und der Akzeptanz von Gewaltmythen, wie der Verantwortungszuschreibung auf das Opfer wurde eine Spearman$-$Rang$-$Korrelation berechnet. Trotz der metrischen Skaleniveaus aller Variablen und die Erfüllung weiterer Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation, musste aufgrund der Ausreißer der Subskala physische Aggression (siehe \hyperref[Boxplot_phAggro]{Anhang E}), die Spearman$-$Korrelation herangezogen werden.
-
-An den mit zwei Sternchen vermerkten $r-$Werten, in Tabelle~\ref{lala}, ist erkennbar, dass alle Subskalen unter sich signifikant sind und, dass sie jeweils mit dem DVMAS positiv korrelieren. Bei der Verantwortungszuschreibung auf das Opfer war ausschließlich die Korrelation mit physischer Aggression signifikatn.
+An den in Tabelle~\ref{lala} mit zwei Sternchen vermerkten $r-$Werten ist erkennbar, dass alle Subskalen unter sich signifikant sind und dass sie jeweils mit dem DVMAS positiv korrelieren. Bei der Verantwortungszuschreibung auf das Opfer war ausschließlich die Korrelation mit physischer Aggression signifikant.
 \input{4 Ergebnisse/Tabelle Explorativ AggroSub.tex}
 
-Die physische Aggression korreliert mittelgradig mit den weiteren Subskalen verbaler Aggression ($r$~=~.36, $p<$~.001), Ärger ($r$~=~.46, $p<$~.001) und Misstrauen ($r$~=~.31, $p<$~.001).
+Die physische Aggression korrelierte mittelgradig mit den weiteren Subskalen verbaler Aggression ($r$~=~.36, $p<$~.001), Ärger ($r$~=~.46, $p<$~.001) und Misstrauen ($r$~=~.31, $p<$~.001).
 Die verbale Aggression korrelierte mittelgradig mit Ärger ($r$~=~.39, $p<$~.001) und Misstrauen ($r$~=~.27, $p<$~.001).
 Die Subskala Ärger wies eine mittelgradig Korrelation mit Misstrauen ($r$~=~.45, $p<$~.001) auf.
 
 Der DVMAS wies bei den vier Subskalen physische Aggression ($r$~=~.28, $p<$~.001) verbale Aggression ($r$~=~.25, $p<$~.001), Ärger ($r$~=~.19, $p<$~.001) und Misstrauen ($r$~=~.24, $p<$~.001) jeweils eine schwache Korrelation auf.
 
-Die Korrelationen zwischen Victim Blaming und den vier Subskalen waren alles schwach: physische Aggression ($r$~=~.07, $p$~=~.03), verbale Aggression ($r$~=~.02, $p$~=~n.s), Ärger ($r$~=~.04, $p$~=~n.s) und Misstrauen ($r$~=~.02, $p$~=~n.s).
+Die Korrelationen zwischen Victim Blaming und den vier Subskalen waren alle schwach: physische Aggression ($r$~=~.07, $p$~=~.03), verbale Aggression ($r$~=~.02, $p$~=~n.s), Ärger ($r$~=~.04, $p$~=~n.s) und Misstrauen ($r$~=~.02, $p$~=~n.s).
 
 % denn alle Variablen sind metrisch skaliert. Des Weiteren ist die Linearität zwischen den Variablen gegeben. Da die Variable der physischen Aggression zu große Ausreißer aufwies, wurde sie aus der Korrelationsrechnung ausgeschlossen. Auch eine bivariate Normalverteilung ist bei den verbliebenen Korrelation vorhanden und lauten wie folgt: verbale Aggression$-$Ärger CI [0.39, 0.51], verbale Aggression$-$Misstrauen CI [0.23, 0.36], verbale Aggression$-$DVMAS CI [0.20, 0.34], Ärger$-$DVMAS CI [0.18, 0.31], Misstrauen$-$DVMAS CI [0.18, 0.29], Misstrauen$-$Ärger CI [0.41, 0.53]. 
 
