--- a/4 Ergebnisse/Histogramm DVMAS.tex
+++ b/4 Ergebnisse/Histogramm DVMAS.tex
@@ -1,7 +1,7 @@
 \begin{figure}[htb]
     \centering
         \includegraphics[width=0.8\linewidth]{Histogramm DVMAS.jpg}
-        \caption[Histogramm DVMAS]{Verteilung der Akzeptanz von Gewaltmythen.}
+        \caption[Histogramm DVMAS]{Verteilung der Akzeptanz der Mythen häuslicher Gewalt.}
         \label{Histogramm DVMAS}
 \end{figure}
 
