--- a/4 Ergebnisse/Tabelle H2 Pearson.tex
+++ b/4 Ergebnisse/Tabelle H2 Pearson.tex
@@ -1,5 +1,5 @@
 \begin{table}[htb]
-    \caption[Mittelwerte, Standardabweichung und Korrelation von Aggression und der Akzeptanz von Gewaltmythen]{\textit {Mittelwerte, Standardabweichung und Korrelation von Aggression und der Akzeptanz von Gewaltmythen}} 
+    \caption[Mittelwerte, Standardabweichung und Korrelation von Aggression und der Akzeptanz der Mythen häuslicher Gewalt]{\textit {Mittelwerte, Standardabweichung und Korrelation von Aggression und der Akzeptanz der Mythen häuslicher Gewalt}} 
     \label{H2_Pearson}
     \centering
     \begin{adjustbox}{width=5.5cm} %{maxwidth=\textwidth}
