--- a/4 Ergebnisse/Tabelle Moderation.tex
+++ b/4 Ergebnisse/Tabelle Moderation.tex
@@ -1,5 +1,5 @@
 \begin{table}[htb]
-    \caption[Moderationsanalyse Geschlecht und Aggression auf die Akzeptanz von Gewaltmythen]{\textit {Moderationsanalyse Geschlecht und Aggression auf die Akzeptanz von Gewaltmythen}} 
+    \caption[Moderationsanalyse Geschlecht und Aggression auf die Akzeptanz der Mythen häuslicher Gewalt]{\textit {Moderationsanalyse Geschlecht und Aggression auf die Akzeptanz der Mythen häuslicher Gewalt}} 
     \label{Moderationsanalyse}
     \centering
     \begin{adjustbox}{width=11cm} %{width=\textwidth}
