--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -1,91 +1,87 @@
 \chapter{Diskussion}   \label{ch_5}
-Der abschließende Diskussionskapitel beginnt mit einer Zusammenfassung der zentralen Ergebnisse. Daraufhin folgt die Interpretation dieser und die Einordnung in den aktuellen wissenschaftlichen Forschungsstand. Im folgenden Zug werden die verwendeten Methoden bewertet. Die Arbeit endet mit theoretischen und oder praktischen Implikationen für die zukünftige Forschung.
+Das abschließende Diskussionskapitel beginnt mit einer Zusammenfassung der zentralen Ergebnisse. Daraufhin folgt ihre Interpretation und die Einordnung in den aktuellen wissenschaftlichen Forschungsstand. Nachfolgend werden die verwendeten Methoden bewertet. Die Arbeit endet mit theoretischen und oder praktischen Implikationen für die zukünftige Forschung oder Praxis.
 
 
 \section{Zusammenfassung der zentralen Ergebnisse}  \label{sec_5.1}
-Diese Bachelorarbeit befasst sich maßgeblich mit den Themen häusliche Gewalt, Gewaltmythen und deren Zusammenhang mit der Aggressivität der Probanden. Im laufe dieses Kapitels werden die Ergebnisse von den zuvor aufgestellten Hypothesen zusammgefasst, sowie die Ergebnisse der Post$-$hoc Analysen.
+Diese Bachelorarbeit befasst sich maßgeblich mit den Themen häusliche Gewalt, Gewaltmythen und deren Zusammenhang mit der Aggressivität der Probanden. Im laufe dieses Kapitels werden die Ergebnisse von den zuvor aufgestellten Hypothesen zusammgefasst sowie die Ergebnisse der Post$-$hoc Analyse.
 
 An dem online erhobenen Fragebogen nahmen hauptsächlich junge Personen teil und mehr als die Hälfte der $N$~=~432 großen Stichprobe waren Frauen. 
-Die Ergebnisse der Manipulationschecks zeigen, dass mehr als 80\% der Probanden die Vignetten richtig gelesen haben und diese auch verstanden haben. Auffalend war die hohe Rate an richtigen Antworten bei der Nachfrage des Geschlecht des Opfers wie den kulturellen Hintergrund.
+Die Ergebnisse der Manipulationschecks zeigten, dass mehr als 80\% der Probanden die Vignetten richtig gelesen und verstanden haben. Auffalend war die hohe Rate an richtigen Antworten bei der Nachfrage nach dem Opfergeschlecht sowie dem kulturellen Hintergrund im Verhältnis zur Antwortrate bezüglich der Gewaltart und dem sozioökonomischen Status.
 
 
 % H1: Der Aggressionsscore korreliert mit victim blaming.
-Die H1 diente der Überprüfung einer möglichen Korrelation zwischen der Aggression und der Verantwortungszuschreibung auf das Opfer. Obwohl die Verteilung der Variable der Verantwortungszuschreibung nicht einer Normalverteilung entspricht, kann sie wegen der, mit $N_{neu}$~=~864, großen Stichprobe und des zentralen Grenzwertsatzes als metrisch eingestuft werden. 
-Bei der Testung der Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation kam eine nicht bivariate Normalverteilung heraus. Aus diesem Grund wurde auf die Spearman$-$Rang$-$Korrelation ausgewichen. Für diesen Test waren alle Voraussetzungen erfüllt. Die Spearman$-$Korrelation ergibt ein nicht signifikantes Ergebnis und auch der vorhandene Effekt ist gering. demzufolge wird die Nullhypothese angenommen und die Aggression der Probanden korreliert nur bedingt und nicht signifikant mit der Verantwortungszuschreibung auf das Opfer.
+Die H1 diente der Überprüfung einer möglichen Korrelation zwischen der Aggression und der Verantwortungszuschreibung auf das Opfer. Obwohl die Verteilung der Variable der Verantwortungszuschreibung nicht einer Normalverteilung entsprach, konnte sie wegen der, mit $N_{neu}$~=~864, großen Stichprobe und des zentralen Grenzwertsatzes als metrisch eingestuft werden. 
+Bei der Testung der Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation kam eine nicht bivariate Normalverteilung heraus. Aus diesem Grund wurde auf die Spearman$-$Rang$-$Korrelation ausgewichen. Für diesen Test waren alle Voraussetzungen erfüllt. Die Spearman$-$Rang$-$Korrelation ergab ein nicht signifikantes Ergebnis und auch der vorhandene Effekt war gering. Demzufolge wurde die Nullhypothese angenommen und die Aggression der Probanden korrelierte nur bedingt und nicht signifikant mit der Verantwortungszuschreibung auf das Opfer.
 
 % H2: Der Aggressionsscore korreliert mit victim blaming.
-Eine positive Korrelation zwischen Aggression und der Akzeptanz von Mythen häuslicher Gewalt ist der Bestandteil der H2. Für dessen Überprüfung waren die Voraussetzungen der Pearson$-$Produkt$-$Moment$-$Korrelation alle gegeben und konnte somit gerechnet werden. Die Testung kam zu einem signifikanten Ergebnis und einem mittelgroßen Effekt. Die Nullhypothese mit demzufolge verworfen werden und die Alternativhypothese angenommen werden. Die Aggression und die Akzeptanz der Gewaltmythen weisen eine mittelsrarke Korrelation auf.
+Bei der H2 wurde eine positive Korrelation zwischen Aggression und der Akzeptanz der Mythen häuslicher Gewalt untersucht. Für dessen Überprüfung waren die Voraussetzungen der Pearson$-$Produkt$-$Moment$-$Korrelation alle gegeben. Somit konnte sie gerechnet werden. Die Testung kam zu einem signifikanten Ergebnis und einem mittelgroßen Effekt. Die Nullhypothese musste demzufolge verworfen und die Alternativhypothese angenommen werden. Die Aggression und die Akzeptanz der Gewaltmythen wiesen eine mittelsrarke Korrelation auf.
 
-% H3: Der Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression wird durch das Geschlecht moderiert.
-Von einer moderierenden Rolle des biologischen Geschlechts des Probanden auf den Zusammenhang zwischen der Akzeptanz von Mythen häuslichen Gewalt und Aggression, wurde bei der H3 ausgegangen. Bei der Überprüfung der Voraussetzungen kam der White-Test zu einem signifikanten Ergebnis, was für eine Homoskedastizität spricht. Die weiteren Voraussetzungen waren gegeben. Das Gesamtmodell der Moderation war signifikant, jedoch zeigte die Interaktion der drei Variablen ein nicht signifikantes Ergebnis. Die Nullhypothese muss demzufolge angenommen werden. Das Geschlecht hat keine moderierende Auswirkung auf den Zusammenhang von Aggression und der Akzeptanz der Gewaltmythen. Des Weiteren wurde überprüft, ob die beiden Prädiktoren Einfluss auf das Kriterium haben. Die Regressionsanalyse zeigt für das Geschlecht und die Aggression ein signifikantes Ergebnis. Beide Variablen beeinflussen demzufolge die Akzeptanz der Mythen häuslicher Gewalt.
+% H3: Der Zusammenhang zwischen Akzeptanz der Mythen häuslicher Gewalt und Aggression wird durch das Geschlecht moderiert.
+Von einer moderierenden Rolle des biologischen Geschlechts des Probanden auf den Zusammenhang zwischen Aggression und der Akzeptanz der Mythen häuslichen Gewalt, wurde bei der H3 ausgegangen. Bei der Überprüfung der Voraussetzungen kam der White-Test zu einem signifikanten Ergebnis, was für eine Heteroskedastizität spricht. Die weiteren Voraussetzungen waren gegeben. Das Gesamtmodell der Moderation war signifikant, jedoch zeigte die Interaktion der drei Variablen ein nicht signifikantes Ergebnis. Die Nullhypothese musste demzufolge angenommen werden. Das Geschlecht hatte keine moderierende Auswirkung auf den Zusammenhang von Aggression und der Akzeptanz der Gewaltmythen. Des Weiteren wurde überprüft, ob die beiden Prädiktoren Einfluss auf das Kriterium haben. Die Regressionsanalyse zeigte für das Geschlecht und die Aggression ein signifikantes Ergebnis. Beide Variablen beeinflussten demzufolge die Akzeptanz der Mythen häuslicher Gewalt.
 
 % explorative Ergebnisse
-Die ersten beiden Post$-$hoc Analysen dienten der weiteren Untersuchung der Korrelation von Aggression und der Akzeptanz der Mythen häuslicher Gewalt. Die erste Analyse erforschte die Korrelation zwischen den Aggression$-$Subskalen verbale Aggression, Ärger und Misstrauen untereinander und jeweils mit dem DVMAS. Sie kam mit erfüllten Voraussetzungen zu signifikanten Ergebnissen. Die drei Subskalen korrelieren mit einem mittelgroßen Effekt untereinander und mit einem schwachen Effekt mit dem DVMAS. Die vierte Subskala, physische Aggression, musste aufgrund zu großer Ausreißer von den Berechnungen entzogen werden.
-
-Die zweite explorative Anaylse untersuchte den Einfluss des biologischen Geschlechts auf die Akzeptanz der Mythen häuslicher Gewalt. Da der Test alle Voraussetzungen erfüllte konnte er durchgeführt werden und somit kann anschließend das Ergebnis zur Interpreation herangezogen werden. Der t$-$Test für unabhängige Stichproben zeigt ein signifikantes Ergebnis. Männer akzeptieren Mythen häuslicher Gewalt mehr als Frauen.
-
-Zusätzlich zu den weiterführenden Analysen von Aggression und DVMAS wurde auch eine Zusammenhangsanalyse der Aggression$-$Subskalen mit der Verantwortungszuschreibung auf das Opfer unternommen. Aufgrund der Ausreißer der physischen Aggression Subskala wurde eine Spearman$-$Rang$-$Korrelation gerechnet. Es zeigt sich, dass ausschließlich die physische Aggression mit der Verantwortungszuschreibung korreliert.
+Die erste Post$-$hoc Analysen diente der weiteren Untersuchung der Korrelation von Aggression, der Verantwortungszuschreibung und der Akzeptanz der Mythen häuslicher Gewalt. Die Analyse erforschte die Korrelation zwischen den Aggression$-$Subskalen physische Aggression, verbale Aggression, Ärger und Misstrauen untereinander und jeweils mit dem DVMAS und Victim Blaming. Sie kam mit erfüllten Voraussetzungen zu signifikanten Ergebnissen. Die vier Subskalen korrelierten signifikant und mit einem mittelgroßen Effekt untereinander und mit einem schwachen Effekt mit der DVMAS. Alle vier Subskalen wiesen schwache Korrelation mit der Verantwortungszuschreibung auf das Opfer auf. Es zeigte sich, dass ausschließlich die physische Aggression signifikant mit der Verantwortungszuschreibung auf das Opfer korreliert.
 
 
 \section{Einordnung und Diskussion der Befunde}     \label{sec_5.2}
-Im folgenden Unterkapitel werden die Ergebnisse der Hypothesen, wie auch die der Post$-$hoc Analyse interpretiert, disskutiert und in den aktuellen Forschungsstand eingeordnet.
+Im folgenden Unterkapitel werden die Ergebnisse der Hypothesen und auch die der Post$-$hoc Analysen interpretiert, disskutiert und in den aktuellen Forschungsstand eingeordnet.
 
 % H1:
-Die H1 zeigt ein nicht signifikantes Ergebnis. Die Aggression korreliert nicht mit Victim Blaming. Dieses Ergebnis deckt sich mit dem Befund von \textcite{H1_moderation_2020}. Das vorliegende nicht signifikante Ergebnis kann möglicherweise auf die bimodale Verteilung zurückgeführt werden. Wie in Abbildung~\ref{Histogramm VicBlame} ersichtlich, gaben sehr viele Probanden dem Täter, auf der linken Seite, die Veranwortung. Auf der rechten Seite, beim Opfer, ist eine weitere vergrößerte Anhäufung der Verantwortungszuschreibung zu sehen. Gegebenenfalls waren die Vignetten zu polarisierend formuliert, oder beinhalteten zu wenige Informationen, die gemeinsam mit einer sozialen Erwünschtheit dazu führte, dass viele Teilnehmer die Veranwortung auf der Seite des Täters zuordneten und exessiv dem Täter die alleinige Veranwortung zuschrieben. Gegebenenfalls kam \textcite{H1_malasia_2012} zu einem signifikanten Ergebnis, da im Rahmen dieser Studie Jugendliche untersucht wurden. Konträr zur Vermutung, dass durch das junge Alter vieler Probanden sich die Ergebnisse mit denen von \textcite{H1_malasia_2012} ähneln werden, gleicht sich das Ergebnis mit dem von \textcite{H1_moderation_2020}. In Kapitel~\ref{subsec_2.1.1} wurde im Sinne der positiven Aggression von dessen Nutzen im Jugendalter berichtet \parencite{Aggression}. Gegebenenfalls weisen Personen im heranwachsenden Alter ein höheres Aggressionsniveau auf, das sich bei den jungen Erwachsenen bereits verringert hat. Die Stichprobe von \textcite{H1_moderation_2020} gleicht sich mehr mit der hier erhobenen und aus diesem Grund sind diese Ergebnisse besser vergleichbar, zumahl sie sich ähneln.
+Die H1 zeigte ein nicht signifikantes Ergebnis. Die Aggression korreliert nicht mit Victim Blaming. Dieses Ergebnis deckt sich mit dem Befund von \textcite{H1_moderation_2020}. Das vorliegende nicht signifikante Ergebnis kann möglicherweise auf die bimodale Verteilung zurückgeführt werden. Wie in Abbildung~\ref{Histogramm VicBlame} ersichtlich, gaben sehr viele Probanden dem Täter, auf der linken Seite, die Veranwortung. Auf der rechten Seite, beim Opfer, ist eine weitere vergrößerte Anhäufung der Verantwortungszuschreibung zu sehen. Gegebenenfalls waren die Vignetten zu polarisierend formuliert, oder beinhalteten zu wenige Informationen. Gemeinsam mit einer sozialen Erwünschtheit führte dies möglicherweise dazu, dass viele Teilnehmer die Veranwortung eindeutig dem Täter oder Opfer zuschrieben. Gegebenenfalls kam \textcite{H1_malasia_2012} zu einem signifikanten Ergebnis, da im Rahmen ihrer Studie Jugendliche untersucht wurden. Konträr zur Vermutung, dass durch das junge Alter vieler Probanden sich die Ergebnisse mit denen von \textcite{H1_malasia_2012} ähneln werden, gleicht sich das Ergebnis mit dem von \textcite{H1_moderation_2020}. In Kapitel~\ref{subsec_2.1.1} wurde im Sinne der positiven Aggression von dessen Nutzen im Jugendalter berichtet \parencite{Aggression}. Gegebenenfalls weisen Personen im heranwachsenden Alter ein höheres Aggressionsniveau auf, das sich bei den jungen Erwachsenen bereits verringert hat. Die Stichprobe von \textcite{H1_moderation_2020} gleicht mehr der hier Erhobenen und aus diesem Grund sind diese Ergebnisse besser vergleichbar, zumahl sie sich ähneln.
 
 % H2:
-Das signifikante Ergebnis der H2 bedeutet, dass Aggression positiv mit der Akzeptanz von Mythen häuslicher Gewalt korreliert. Obwohl bislang nicht viele Studien diese beien Konstrukte gemeinsam untersucht haben, zeigt diese Arbeit, wie auch die von \textcite{H2_u_3_Bhogal_2016, H1_moderation_2020} dass es einen Zusammenhang gibt. Demzufolge akzeptiert eine Person mit einem höheren Aggressionsniveau vermehrt die Mythen häuslicher Gewalt. Wie bereits in Kapitel~\ref{subsec_2.1.1} vermutet, kann es daran liegen, dass die Mythen Gewalt thematisieren, die oft, wenn nicht ausschließlich, ihren Ursprung in der Aggression haben. Wie \textcite{Def_Aggressivität_vs_violence} in Kapitel~\ref{subsec_2.1.1} berichtet wurde, ist Gewalt erlerntes Verhalten, geprägt duch kulturelle Ideologien. Die gesellschaftliche Wahrnehmung und Einstellung prägen auch die Mythen häuslicher Gewalt \parencite{Labelingtheory_plus, DVMAS_Peters}. Die gesellschaftlichen und kulturellen Einstellungen und Ideologien scheinen demzufolge sowohl die Mythen, wie auch die Gewalt zu bedingen. Aus dem vorliegenden signifikanten Ergebnis lässt sich vermuten, dass diese Gewalt Aggression beinhaltet.
+Das signifikante Ergebnis der H2 bedeutet, dass Aggression positiv mit der Akzeptanz der Mythen häuslicher Gewalt korreliert. Obwohl bislang nicht viele Studien diese beien Konstrukte gemeinsam untersucht haben, zeigt diese Arbeit sowieauch die von \textcite{H2_u_3_Bhogal_2016, H1_moderation_2020}, dass es einen Zusammenhang gibt. Demzufolge akzeptiert eine Person mit einem höheren Aggressionsniveau vermehrt die Mythen häuslicher Gewalt. Wie bereits in Kapitel~\ref{subsec_2.1.1} vermutet, kann es daran liegen, dass die Mythen Gewalt thematisieren, die oft, wenn nicht ausschließlich, ihren Ursprung in der Aggression haben. Wie \textcite{Def_Aggressivität_vs_violence} in Kapitel~\ref{subsec_2.1.1} referenziert wurde, ist Gewalt erlerntes Verhalten, geprägt duch kulturelle Ideologien. Die gesellschaftliche Wahrnehmung und Einstellung prägen auch die Mythen häuslicher Gewalt \parencite{Labelingtheory_plus, DVMAS_Peters}. Die gesellschaftlichen und kulturellen Einstellungen und Ideologien scheinen demzufolge sowohl die Mythen sowieauch die Gewalt zu bedingen. Aus dem vorliegenden signifikanten Ergebnis lässt sich vermuten, dass diese Gewalt aus der Aggression entstammt.
 
 
 % H3:
-Die Moderationsanalyse der H3 zeigt eine nicht signifikante Interaktion des biologischen Geschlechts mit der Aggression und der Akzeptanz der Mythen häuslicher Gewalt. In Kapitel~\ref{subsec_2.2.3} wurde von Geschlechterunterschieden bezüglich der Aggressivität wie auch der Akzeptanz von Gewaltmythen berichtet \parencite{H2_u_3_Bhogal_2016, H3_MFUnterschied, H3_2020}. Obwohl diese Studien darlegen, dass das Geschlecht sowohl auf die Aggression, wie auch auf die Akzeptanz von Mythen Auswirkungen hat, konnte diese Moderationsanalyse keinen Beleg dafür darlegen. Der Einfluss von Aggression auf die Akzeptanz von Gewaltmythen ist Geschlechterunabhängig. Bei der Prüfung der Voraussetzungen einer Homoskedastizität fiel der Whit-Test signifikan aus, das für eine Heteroskedastizität spricht. Diese kann zu einem möglicherweise nicht signifikanten Ergebnis führen, obwohl beide Prädiktoren hoch signifikatne Haupteffekte aufweisen.
+Die Moderationsanalyse der H3 zeigte eine nicht signifikante Interaktion des biologischen Geschlechts mit der Aggression und der Akzeptanz der Mythen häuslicher Gewalt. In Kapitel~\ref{subsec_2.2.3} wurde von geschlechtsspezifischen Unterschieden bezüglich der Aggressivität sowie auch der Akzeptanz der Gewaltmythen berichtet \parencite{H2_u_3_Bhogal_2016, H3_MFUnterschied, H3_2020}. Obwohl diese Studien darlegten, dass das Geschlecht sowohl auf die Aggression sowie auch auf die Akzeptanz der Mythen Auswirkungen hat, konnte diese Moderationsanalyse keinen Beleg dafür darlegen. Der Einfluss von Aggression auf die Akzeptanz der Mythen häuslicher Gewalt ist geschlechtsunabhängig. Bei der Prüfung der Voraussetzungen einer Homoskedastizität fiel der White-Test signifikan aus, das für eine Heteroskedastizität spricht. Diese kann möglicherweise zu einem nicht signifikanten Ergebnis geführt haben, obwohl beide Prädiktoren hoch signifikante Haupteffekte aufwiesen.
 Der durch die Heteroskedastizität entstandene Bias des Standardfehlers kann zu fehlerhaften Interpretationen und Schlussfolgerungen des $p-$Wertes der Moderation führen \parencite{Voraussetzung_Moderation}. 
 
-Aufgrund des dennoch nicht signifikanten Moderationseffekt, wurde eine Analyse der Haupteffekte durchgeführt. Sie zeigt einen Effekt des Geschlechts auf die Akzeptanz, wie einen Effekt der Aggression auf die Akzeptanz. Dies bedeutet, dass unabhängig voneinander das Geschlecht und die Aggression Einfluss auf die Akzeptanz von Mythen häuslicher Gewalt nehmen. Der Einfluss des Geschlechts stimmen mit den Ergebnissen von \textcite{H3_2020} überein.
+Aufgrund des dennoch nicht signifikanten Moderationseffekts, wurde eine Analyse der Haupteffekte durchgeführt. Sie zeigten einen Effekt sowohl des Geschlechts als auch der Aggression auf die Akzeptanz. Dies bedeutet, dass unabhängig voneinander das Geschlecht und die Aggression Einfluss auf die Akzeptanz der Mythen häuslicher Gewalt nehmen. Der Einfluss des Geschlechts stimmt mit den Ergebnissen von \textcite{H3_2020} überein.
 
 
 %Explo
 % coor subskalen dvmas
 % corr subskalen vicblame
-Die Spearman$-$Rang$-$Korrelationen der Post$-$hoc Analyse fiel größtenteils signifikant aus. Alle Aggression$-$Subskalen korrelieren positiv untereinander und mit dem DVMAS. Bei der Korrelation mit der Verantwortungszuschreibung auf das Opfer korreliert ausschließlich die physische Aggression positiv mit der Verantwortungszuschreibung. Zur Untersuchung der Zusammenhänge wurde die Spearman$-$Korrelation verwendet, da bei der Prüfung der Voraussetzungen einer Pearson$-$Produkt$-$Moment$-$Korrelation die Aggression$-$Subskala große Ausreißer aufwies. Die signifikanten Korrelation der Subskalen sind mit der Validierung des Deutschen Aggressionsfragebogens \parencite{Aggressionsfragebogen} übereinstimmig. Somit unterstützen sie die Validität des verwendeten Fragbogens. Die signifikante positive Korrelation der Subskalen mit dem DVMAS dienen einer genaueren Untersuchung der H2 Korrelation. Das Ergebnis der Korrelation der Subskalen mit Victim Blaming weicht von dem Ergebnis von \textcite{H1_moderation_2020} ab. 
+Die Spearman$-$Rang$-$Korrelationen der Post$-$hoc Analyse fiel größtenteils signifikant aus. Alle Aggression$-$Subskalen korrelierten positiv untereinander und mit der DVMAS. Nur die positive Korrelation der physischen Aggression mit der Verantwortungszuschreibung auf das Opfer fiel signifikant aus. Die weiteren Subskalen wiesen ebenfalls eine schwache positive Korrelation auf, waren jedoch nicht signifikant. Zur Untersuchung der Zusammenhänge wurde die Spearman$-$Rang$-$Korrelation verwendet, da bei der Prüfung der Voraussetzungen einer Pearson$-$Produkt$-$Moment$-$Korrelation die physische Aggression große Ausreißer aufwies. Die signifikanten Korrelation der Subskalen stimmen mit der Validierung des Deutschen Aggressionsfragebogens \parencite{Aggressionsfragebogen} überein. Somit unterstützen sie die Validität des verwendeten Fragbogens. Die signifikante positive Korrelation der Subskalen mit der DVMAS dienen einer genaueren Untersuchung der H2 Korrelation. Das Ergebnis der Korrelation der Subskalen mit Victim Blaming weicht von dem Ergebnis von \textcite{H1_moderation_2020} ab. 
 % warum nur physisch signifikant?
 
 
 \section{Bewertung der Methode}   \label{sec_5.3}
-Dieses Unterkapitel betrachtet die verwendete Methode genauer. Es werden sowohl die Stärken, wie auch ihre Schwächen aufgewiesen.
+Dieses Unterkapitel betrachtet die verwendete Methode genauer. Es werden sowohl die Stärken sowieauch ihre Schwächen aufgewiesen.
 Durch die erreichte Stichprobe von $N$~=~432 konnte die zuvor berechnete Mindeststichprobe von 395 Probanden erreicht werden. Dies ist ein Argument für eine valide Erhebung einer quantitativen Querschnittsstudie. Die Stichprobe wurde nichtrandomisiert erhoben, die sich durch den Schneeballeffekt vergrößerte.
 
-Der Einsatz von Manipulationschecks zur Überprüfung der Verständlichkeit und bewusste Wahrnehmung der dargebotenen Fallvignetten, trägt ebenfalls zu einer validen Untersuchung bei. Die Überprüfung des sozioökonomischen Status der Personen innerhalb der Fallvignetten kann zu Verwirrungen geführt haben, da gegebenenfalls von einem gemeinsamen sozioökonomischen Status des Paares ausgegangen wurde. Dennoch gewährleisten die Überprüfungen eine gute Einschätzung der Verständlichkeit der Vignetten. Dies wurde ersichtlich durch die hohe Identifikation des Geschlechts und des kulturellen Status innerhalb der Fallvignetten. Das Geschlecht kann aufgrund der noch immer bestehenden Vorstellung eines überwiegend weiblichen Opfers zu dessen richtigen Identifikation geführt haben. Die ausländischen und somit, in einer deutschen Befragung, exotischeren Namen konnten der Grund für dessen hohe Rate an Identifikation sein.
+Der Einsatz von Manipulationschecks zur Überprüfung der Verständlichkeit und bewussten Wahrnehmung der präsentierten Fallvignetten, trägt ebenfalls zu einer validen Untersuchung bei. Die Überprüfung des sozioökonomischen Status der Personen innerhalb der Fallvignetten kann zu Verwirrungen geführt haben, da gegebenenfalls von einem gemeinsamen sozioökonomischen Status des Paares ausgegangen wurde. Dennoch gewährleisten die Überprüfungen eine gute Einschätzung der Verständlichkeit der Vignetten. Dies wurde ersichtlich durch die signifikanten Ergebnisse der Chi$^2-$Tests. Das Geschlecht kann aufgrund der noch immer bestehenden Vorstellung eines überwiegend weiblichen Opfers zu dessen richtigen Identifikation geführt haben. Die ausländischen und somit, in einer deutschen Befragung, exotischeren Namen konnten der Grund für deren hohe Rate an Identifikation sein.
 
-Der verwendete Aggressionsfragebogen, wie auch der Fragebogen zur Erfassung der Akzeptanz von Mythen häuslicher Gewalt zeigen beide eine hohe Reliabilität und Validität auf \parencite{Peters2003, Aggressionsfragebogen}. Der Aggressionsfragebogen, wie auch der deutsche DVMAS eigneten sich demzufolge gut für die Erhebung der Variablen Aggression und Akzeptanz von Gewaltmythen. 
-Die Entscheidung die Fallvignetten zu Beginn zu präsentieren, diente der unvoreingenommenen Verantwortungszuschreibung seitens der Probanden. Diese präventive Maßnahme birgt jedoch auch Nachteile. Die Fallvignetten forderten die Beurteilung eines sensiblen Themas und die Verantwortungszuschreibung der kritischen Situation. Durch diese Voreingenommenheit kann es zu sozial erwünschtem Antwortverhalten der späteren Fragbögen gekommen sein. Ebenfalls die Erhebung der, in den Fallvignetten befindlichen Variablen verleif nicht optimal. Jeder Proband erhielt ein psychisches und ein sexualisiertes Szenario. Die übrigen drei Variablen wurden randomisiert zugeteilt. Dies führte dazu, dass den Probanden gegebenenfalls die selbe Variable dargeboten wurde, nur ein Mal im sexualisierten und ein Mal im physischen Setting. 
+Der verwendete Aggressionsfragebogen sowie auch der Fragebogen zur Erfassung der Akzeptanz der Mythen häuslicher Gewalt zeigen beide eine hohe Reliabilität und Validität auf \parencite{Peters2003, Aggressionsfragebogen}. Der Aggressionsfragebogen und der deutsche DVMAS eigneten sich demzufolge gut für die Erhebung der Variablen Aggression und Akzeptanz der Gewaltmythen. 
+Die Entscheidung, die Fallvignetten zu Beginn zu präsentieren, diente dazu, dass der Probanden möglichst unvoreingenommen die Verantwortung zuschreibung konnte. Diese präventive Maßnahme birgt jedoch auch Nachteile. Die Fallvignetten forderten die Beurteilung eines sensiblen Themas und die Verantwortungszuschreibung in der kritischen Situation. Durch diese Voreingenommenheit kann es zu sozial erwünschtem Antwortverhalten der späteren Fragbögen gekommen sein. Ebenfalls verleif die Erhebung der in den Fallvignetten befindlichen Variablen nicht optimal. Jeder Proband erhielt ein psychisches und ein sexualisiertes Szenario. Die übrigen drei Variablen wurden randomisiert zugeteilt. Dies führte dazu, dass den Probanden gegebenenfalls die selbe Variable zugewiesen wurde, nur ein Mal im sexualisierten und ein Mal im psysischen Setting. 
 
-Durch das Onlinemedium konnte kein Einfluss auf Störvariablen erfolgen. Es war den Teilnehmern selbst überlassen unter welchen Bedingungen sie an der Studie teilnehmen. Durch die abschließende Nachfrage der sinngemäßen Bearbeitung kann davon ausgegangen werden, dass es keine zu großen Störvariablen bei der Durchführung gab. Durch einen fehlenden Versuchsleiter entfielen dessen Effekte, wie zum Beispiel, dass sich ein Proband dadruch beobachtet fühlen kann. Dies führt zu objektiveren Datenerhebungen. Dennoch konnte keine aktive Kontrolle der Störvariablen erfolgen.
+Durch das Onlinemedium konnte kein Einfluss auf Störvariablen erfolgen. Es war den Teilnehmern selbst überlassen unter welchen Bedingungen sie an der Studie teilnehmen. Durch die abschließende Nachfrage der sinngemäßen Bearbeitung kann davon ausgegangen werden, dass es keine zu großen Störvariablen bei der Durchführung gab. Durch einen fehlenden Versuchsleiter entfielen dessen Effekte, wie zum Beispiel, dass sich ein Proband dadruch beobachtet fühlen kann. Dies führt zu objektiveren Datenerhebungen. Dennoch konnte keine aktive Kontrolle der möglichen Störvariablen erfolgen.
 
-Zusammenfassend kann man die Ergebung der Daten durch die standardisierten Fragebögen und durch die Manipulationschecks als valide einstufen. Dennoch sollte bei einer erneuten Untersuchung auf eine verbesserte Randomisierung der Variablen, innerhalb der Fallvignetten, wie auch der Fragebögen geachtet werde. 
+Zusammenfassend kann man die Erhebung der Daten durch die standardisierten Fragebögen und durch die Manipulationschecks als valide einstufen. Dennoch sollte bei einer erneuten Untersuchung auf eine verbesserte Randomisierung der Variablen, innerhalb der Fallvignetten sowieauch der Fragebögen geachtet werde. 
 
 
 \section{Ausblick}    \label{sec_5.4}
 In diesem abschließenden Kapitel werden die Konsequenzen und Folgen der gewonnenen Erkenntnisse genannt. Des Weiteren wird auf einen weiteren Forschungsbedarf hingewiesen.
 
-Die zu Beginn aufgeworfene Frage, eines möglichen Zusammenfassungs zwischen der Aggression der Probanden und ihrer Akzeptanz von Mythen häuslicher Gewalt, sowie ihrer Tendenz zum Victim Blaming, kann abschließend teilwese zugestimmt werden. Das Ausmaß an Aggression hängt mit der Akzeptanz von Mythen häuslicher Gewalt zusammen. Weiter zeigt eine explorative Post$-$hoc Analyse, dass die vier Subskalen der Aggression ebenfalls mit dem DVMAS zusammenhängen. Jedoch korreliert, im Rahmen einer weiteren Post$-$hoc Analyse, nur eine Subskala der Aggression, die physische Aggression, mit der Verantwortungszuschreibung auf das Opfer. Auch der vermutete Interaktionseffekt des Geschlechts zwischen Aggression und Gewaltmythenakzeptanz ist nicht gegeben. 
+Die zu Beginn aufgeworfene Frage, eines möglichen Zusammenhangs zwischen der Aggression der Probanden und ihrer Akzeptanz der Mythen häuslicher Gewalt sowie ihrer Tendenz zum Victim Blaming, kann abschließend teilwese zugestimmt werden. Das Ausmaß an Aggression hängt mit der Akzeptanz der Mythen häuslicher Gewalt zusammen. Weiter zeigt eine explorative Post$-$hoc Analyse, dass die vier Subskalen der Aggression ebenfalls mit der DVMAS zusammenhängen. Jedoch korreliert, im Rahmen einer weiteren Post$-$hoc Analyse, nur eine Subskala der Aggression, die physische Aggression, mit der Verantwortungszuschreibung auf das Opfer. Auch der vermutete Interaktionseffekt des Geschlechts zwischen Aggression und Gewaltmythenakzeptanz ist nicht gegeben. 
 
 %Fragebogen validieren
-Der im Rahmen des Projektes verwendete Fragebogen zur Erhebung der Akzeptanz von Mythen häuslicher Gewalt ist zu dem Zeitpunkt dieser Verschriftlichung bislang noch nicht validiert worde. Da es sich lediglich um eine sinngemäße Übersetzung des Originals von \textcite{Peters2003} handelt, kann davon ausgegangen werden, dass sich die Validität, Reliabilität und Objektivität nicht ausschlaggebend davon unterscheiden. Aus diesem Grund wird die Validität dieser Arbeit in Bezug auf den DVMAS als gut geschätzt. Dennoch sollte eine Validierung der deutschen Übersetzung erfolgen und anschließend gegebenenfalls eine erneute Untersuchung der, im Rahmen dieser Bachelorthesis, aufgestellten Hypothesen bezüglich des DVMAS durchgeführt werden. 
+Der im Rahmen des Projektes verwendete Fragebogen zur Erhebung der Akzeptanz der Mythen häuslicher Gewalt ist zu dem Zeitpunkt dieser Verschriftlichung bislang noch nicht validiert worde. Da es sich lediglich um eine sinngemäße Übersetzung des Originals von \textcite{Peters2003} handelt, kann davon ausgegangen werden, dass sich die Validität, Reliabilität und Objektivität nicht ausschlaggebend davon unterscheiden. Aus diesem Grund wird die Validität dieser Arbeit in Bezug auf die DVMAS als gut geschätzt. Dennoch sollte eine Validierung der deutschen Übersetzung erfolgen und anschließend gegebenenfalls eine erneute Untersuchung der, im Rahmen dieser Bachelorthesis, aufgestellten Hypothesen bezüglich der DVMAS durchgeführt werden. 
 
 %viel mehr infos und weiterbildung muss sein (Mythen)
-Die Ergebnisse zeigen, dass in Bezug auf die Gewaltmythen die Gesellschaft noch weiter aufgeklärt werden muss. Der Originalfragebogen stammt aus dem Jahr 2003 und ist somit an die 20 Jahre als. Dennoch sind sie noch weit stark verbreitet, was durch unsere Stichprobe ersichtlich ist. Im Rahmen der Aufklärung sollte ein Fokus auf die männliche Bevölkerung gesetzs werden, das sie diese Mythen vermehrt akzeptieren. Zudem sollten auch verhaltensauffällige Kinder und Jugendliche über dieses Thema aufgeklärt werden, da vor allem in den Jugendjahren sich große Teile des Selbst entwickeln \parencite{H1_Entwicklung}.
+Die Ergebnisse zeigen, dass in Bezug auf die Gewaltmythen die Gesellschaft noch weiter aufgeklärt werden muss. Der Originalfragebogen stammt aus dem Jahr 2003 und ist somit an die 20 Jahre alt. Dennoch sind die Mythen noch stark verbreitet, was durch unsere Stichprobe ersichtlich ist. Im Rahmen der Aufklärung sollte ein Fokus auf die männliche Bevölkerung gesetzs werden, da sie diese Mythen vermehrt akzeptieren. Zudem sollten auch verhaltensauffällige Kinder und Jugendliche über dieses Thema aufgeklärt werden, da sich vor allem in den Jugendjahren große Teile des Selbst entwickeln \parencite{H1_Entwicklung}.
 
 %Alt mit Jung vergleichen, weil hauptsächlich Jung kann auch verzerren
 % vielleicht auch mit kindern, um altersunterschied zu erforschen was aggro, aber auch dvmas angeht und ggf. vic blame
-Daran anschließend sollten die Themen dieser Arbeit in einer repräsentativen Studie wiederholt werden. Durch die von der Volljährigkeit nicht weit entfernet Stichprobe, kann nicht auf ältere Generationen geschlossen werden. Zusätzlich währe eine Untersuchung der Aggressivität, der Gewaltmythenakzeptanz und des Victim Blamings bei Kindern, Jugendlichen und älteren Altersgruppen interessant, um auch Generationsunterschiede zu erforschen. In Kapitel~\ref{sec_5.2} wurde bereits vermutet, dass das Alter eventuell eine Auswirkung auf die Aggressionsausprägung hat. Durch eine altersunterscheidende Untersuchung könnte dies weiter erforscht werden. 
+Daran anschließend sollten die Themen dieser Arbeit in einer repräsentativen Studie wiederholt werden. Durch die junge Stichprobe können die Ergebnisse nicht auf ältere Generationen übertragen werden. Zusätzlich wäre eine Untersuchung der Aggressivität, der Gewaltmythenakzeptanz und des Victim Blamings bei Kindern, Jugendlichen und älteren Altersgruppen interessant, um auch generationsspezifische Unterschiede zu erforschen. In Kapitel~\ref{sec_5.2} wurde bereits vermutet, dass das Alter eventuell eine Auswirkung auf die Aggressionsausprägung hat. Durch eine altersunterscheidende Untersuchung könnte dies weiter analysiert werden. 
 
 %komplette randomisierung: Variablen Vignetten und FB Reiehendolge
 % meine explos können falsch positiv sein, deshalb nochmal prüfen
 % h3 wegen hetero kein valides Ergebnis, deshalb nochmal prüfen, weil beide prädiktoren haben hoch signifikatne haupteffekte und wegen hetero vielleicht fälschlicherweise nicht sig
 % themen von h1 nochmal prüfen, weil VicBlame net normalverteilt und dadurch vielleicht falsche schlüsse
-Die im Rahmen dieser Bachelorthesis durchgeführten Analysen sollten zur Validierung erneut und gegebenenfalls mit einer größeren Stichprobe nochmals erhoben werden. Zum Einen dient dies der Überprüfung der möglicherweise falsch positiven Post$-$hoc Analysen, weiter einer potentiellen Verifikation der Hypothesenbefunde. Zum Anderen kann somit eine vollständige Randomisierung aller Variablen ermöglicht werden. Somit würden die Variablen innerhalb der Fallvignetten randomisiert werden. Zusätzlich kann somit die Reihenfolge der im Fragebogen enthaltenden vier Bausteine, Fallvignetten, DVMAS, Deutscher Aggressionsfragebogen und sozidemographische Daten, zufällig festgelegt werden. 
+Die im Rahmen dieser Bachelorthesis durchgeführten Analysen sollten zur Validierung erneut und gegebenenfalls mit einer größeren Stichprobe nochmals erhoben werden. Zum Einen dient dies der Überprüfung der möglicherweise falsch positiven Post$-$hoc Analysen, zum Anderen einer potentiellen Verifikation der Hypothesenbefunde. Darüber hinaus kann somit eine vollständige Randomisierung aller Variablen ermöglicht werden. Somit würden die Variablen innerhalb der Fallvignetten randomisiert werden. Zusätzlich kann somit die Reihenfolge der im Fragebogen enthaltenden vier Bausteine (Fallvignetten, DVMAS, Deutscher Aggressionsfragebogen und sozidemographische Daten) zufällig festgelegt werden. 
 
 
 % abschließendes Fazit (i guess)
-Abschließend kann festgehalten werden, dass eine erneute Durchführung, der hier untersuchten Konstrukte, ein Gewinn für die zukünftige Forschung darstellt. Nichts desto trotz sollte bereits jetzt mehr Aufklärung über häusliche Gewalt gewährleistet werden.
+Abschließend kann festgehalten werden, dass eine erneute Durchführung der hier untersuchten Konstrukte ein Gewinn für die zukünftige Forschung darstellt. Nichtsdestotrotz sollte bereits jetzt mehr Aufklärung über häusliche Gewalt und dessen Mythen erfolgen.
