--- a/Abstract.tex
+++ b/Abstract.tex
@@ -6,8 +6,16 @@
  \setcounter{page}{2}
 
 %%%%%%%%% START ABSTRACT %%%%%%%%%
+% 150-250 Wörter: 
+%Fragestellung
+%Hypothesen
+%Methode: Form der Datenerhebung, verwendete Tests
+%Merkmale Stichprobe (Anzahl, Alter, Geschlecht)
+%zentrale Ergebnisse
+%Schlussfolgerung der Hypothesen
 
-  \noindent Diese Arbeit beinhaltet eine LaTeX Vorlage für die Fakultät für Angewandte Psychologie der SRH Hochschule Heidelber. Es umfasst sowohl eine Gliederung für eine übliche Arbeit als auch kommentierte Beispiele und generelle Regeln.
+  \noindent Die zugrundeliegende Studie untersucht den Zusammenhang zwischen der Aggression und der Akzeptanz der Mythen häuslicher Gewalt sowie der Tendenz zur Verantwortungszuschreibung auf das Opfer. Zudem wird die moderierende Rolle des Geschlechts im Zusammenhang mit der Aggression und der Gewaltmythenakzeptanz untersucht. Die Befragung erfolgte in Form eines anonymen Online-Fragebogens unter Verwendung von Fallvignetten, einer deutschen Übersetzung des Domestic Violence Myth Acceptance Scale (DVMAS) und den Deutschen Aggressionsfragebogen. Die Stichprobe ($N$~=~432) hat ein Durchschnittsalter von 33.52 Jahren und besteht zu über 70\% aus Frauen. Die Ergebnisse der Spearman$-$Rang$-$Korrelation zeigen, dass der bestehende Zusammenhang zwischen Aggression und der Verantwortungszuschreibung auf das Opfer nicht signifikant ist ($r$~=~.18; $p$~=~n.s) wodurch die Nullhypothese angenommen wird. Die Pearson$-$Produkt$-$Moment$-$Korrelation zeigt, dass die Korrelation zwischen Aggression und der Gewaltmythenakzeptanz signifikant ist ($r$~=~.38; $p<$~.001), wodurch die Alternativhypothese angenommen wird. Zuletzt zeigt die Moderationsanalyse keine signifikante Interaktion des Geschlechts auf die Interaktion zwischen Aggression und Gewaltmythenakzeptanz ($\Delta R^{2}$~=~.12\%; $p$~=~.29). Somit wird hier ebenfalls die Nullhypothese angenommen.
+  
   
 %%%%%%%%%% END ABSTRACT %%%%%%%%%%
 
