--- a/Anhang.tex
+++ b/Anhang.tex
@@ -140,6 +140,12 @@
     \end{figure}
     
     \newpage
+    %\begin{figure}[htb!]
+    %    \centering
+    %        \includegraphics[height=\textheight, frame]{Seite 8.png}
+    %        \caption[]{Seite 8 des Online$-$Fragebogens (Deutscher Aggressionsfragebogen \parencite{Aggressionsfragebogen})}
+    %\end{figure}
+    
     \begin{figure}[htb!]
         \centering
             \includegraphics[width=\textwidth, frame]{Seite 8_1.png}
