--- a/Quellen.bib
+++ b/Quellen.bib
@@ -1,117 +1,3 @@
-
-
-% Hier die Quellenangaben aus dem Internet einfügen
-
-% Autor mit 2 Nachnamen
-@article{AQUINOJARQUIN2021,
-title = {Current advances in overcoming obstacles of CRISPR/Cas9 off-target genome editing},
-journal = {Molecular Genetics and Metabolism},
-year = {2021},
-issn = {1096-7192},
-doi = {https://doi.org/10.1016/j.ymgme.2021.08.002},
-url = {https://www.sciencedirect.com/science/article/pii/S1096719221007666},
-author = {Aquino Jarquin, Guillermo},
-keywords = {CRISPR/Cas9, Genome-editing, Off-target effects, Base editors, Prime editing, Anti-CRISPR proteins},
-abstract = {CRISPR/Cas9-based technology has revolutionized biomedical research by providing a high-fidelity gene-editing method, foreshadowing a significant impact on the therapeutics of many human genetic disorders previously considered untreatable. However, off-target events represent a critical hurdle before genome editing can be fully established in clinical practice. This mini-review recapitulates some recent advances for detecting and overcoming off-target effects mediated by the CRISPR/Cas9 system that could increase the likelihood of clinical success of the CRISPR-based approaches.}
-}
-
-% 4 Autoren
-@article{b0424f3eebf64b03a01a8841d7e3bf8d,
-title = {The mediating role of coping: A cross-sectional analysis of the relationship between coping self-efficacy and coping effectiveness among athletes},
-abstract = {This study examines the relationship among global coping self-efficacy, coping, and coping effectiveness within athletes. We hypothesized that there would be a positive association between coping self-efficacy and coping effectiveness, which would be mediated by coping. It was also predicted that coping strategies within the task-oriented coping dimension would be positively associated with coping effectiveness, whereas strategies from the disengagement- and distraction-oriented coping dimensions would be negatively associated with coping effectiveness. Participants were 353 athletes between the ages of 18 and 29 years, who completed a measure of coping self-efficacy the night before they competed, in addition to a measure of the athletes' use of coping strategies and their perceived coping effectiveness, which was completed immediately after the competitive event. Results revealed that higher global coping self-efficacy scores were significantly (r = .33, p < .01) associated with coping effectiveness. Furthermore, task-oriented and disengagement-oriented coping partially mediated this relationship, but distraction-oriented coping was not a significant partial mediator of the relationship between global coping self-efficacy and coping effectiveness.},
-author = {A.R. Nicholls and R.C.J. Polman and Andy Levy and E. Borkoles},
-year = {2010},
-doi = {10.1037/a0020064},
-language = {English},
-volume = {17},
-pages = {181--192},
-journal = {International Journal of Stress Management},
-issn = {1072-5245},
-publisher = {springer},
-}
-
-% 2 Autoren, In book
-@Inbook{Amelang2006,
-author={Amelang, Manfred and Schmidt-Atzert, Lothar},
-title={Der diagnostische Prozess},
-bookTitle={Psychologische Diagnostik und Intervention},
-year={2006},
-publisher={Springer Berlin Heidelberg},
-address={Berlin, Heidelberg},
-pages={379--394},
-isbn={978-3-540-28507-6},
-doi={10.1007/3-540-28507-5_5},
-url=[https://doi.org/10.1007/3-540-28507-5_5}
-}
-
-% 6 Autoren
-@article{doi:10.1026/1616-3443/a000099,
-author = {Daig, Isolde and Spangenberg, Lena and Henrich, Gerhard and Herschbach, Peter and Kienast, Thorsten and Brähler, Elmar},
-title = {Alters- und geschlechtspezifische Neunormierung der Fragen zur Lebenszufriedenheit (FLZM) für die Altersspanne von 14 bis 64 Jahre},
-journal = {Zeitschrift für Klinische Psychologie und Psychotherapie},
-volume = {40},
-pages = {172-178},
-year = {2011},
-doi = {10.1026/1616-3443/a000099},
-URL = {https://doi.org/10.1026/1616-3443/a000099},
-eprint = {https://doi.org/10.1026/1616-3443/a000099},
-abstract = { Zusammenfassung. Theoretischer Hintergrund: Der FLZM-Fragebogen (Fragen zur Lebenszufriedenheit) ist ein ökonomisches, reliables Verfahren zur Erfassung der allgemeinen Lebenszufriedenheit. Fragestellung: Die vorhandenen Normwerte sind über 10 Jahre alt, zudem fehlen bislang Angaben über Prozentränge. Methode: Die vorliegende Studie stellt eine alters- und geschlechtsspezifische Neunormierung anhand einer bevölkerungsrepräsentativen Stichprobe aus Deutschland für den Altersbereich 14 bis 64 Jahre vor (N = 3877). Ergebnisse: Mittelwerte, Standardabweichungen, Trennschärfeindices und Prozentränge werden für Alter und Geschlecht getrennt berichtet. Die Ergebnisse zeigen gute interne Konsistenzen für die gewichtete (Cronbachs Alpha = 0,83) wie auch für die ungewichtete Lebenszufriedenheit (Cronbachs Alpha = 0,82). Schlussfolgerungen: Für die FLZM liegen aktualisierte Normdaten vor. Für einen Einsatz des Messinstruments können nun aktuelle Vergleichsdaten der gesamtdeutschen Bevölkerung zwischen 14–64 Jahren herangezogen werden. }
-}
-
-% mehr als 8 Autoren
-@ARTICLE{ao1,
-  AUTHOR         = {Boker, S. and Neale, M. and Maes, H. and Wilde, M. and
-                   Spiegel, M. and Brick, T. and Spies, J. and Estabrook,
-                   R. and Kenny, S. and Bates, T.},
-  TITLE          = {Open{M}x: {A}n open source extended structural
-                   equation modeling framework},
-  JOURNAL        = {Psychometrika},
-  VOLUME         = {76},
-  PAGES          = {306--317},
-  DATE           = {2011}
-}
-
-@article{TERNS2011321,
-title = {CRISPR-based adaptive immune systems},
-journal = {Current Opinion in Microbiology},
-volume = {14},
-pages = {321-327},
-year = {2011},
-note = {Ecology and industrial microbiology / Special section: Archaea},
-issn = {1369-5274},
-doi = {https://doi.org/10.1016/j.mib.2011.03.005},
-url = {https://www.sciencedirect.com/science/article/pii/S1369527411000488},
-author = {Michael P Terns and Rebecca M Terns},
-abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune systems that control invasions of viruses and plasmids in archaea and bacteria. Prokaryotes with CRISPR–Cas immune systems capture short invader sequences within the CRISPR loci in their genomes, and small RNAs produced from the CRISPR loci (CRISPR (cr)RNAs) guide Cas proteins to recognize and degrade (or otherwise silence) the invading nucleic acids. There are multiple variations of the pathway found among prokaryotes, each mediated by largely distinct components and mechanisms that we are only beginning to delineate. Here we will review our current understanding of the remarkable CRISPR–Cas pathways with particular attention to studies relevant to systems found in the archaea.}
-}
-
-
-% Beginn erfundener Quellen
-
-% Werk einer Person
-@book{Hussy2010,
-  year = {2010},
-  publisher = {Springer Heidelberg},
-  author = {Autor, A.},
-  title = {Titel des Buchs}
-}
-
-% Instituation als Quelle
-@MISC{6.13t,
-  AUTHOR         = {{National Institute of Mental Health}},
-  SHORTAUTHOR    = {NIMH},
-  TITLE          = {Title},
-  DATE           = {2003},
-}
-@MISC{6.13p,
-  AUTHOR         = {{Deutsches Jugendinstitut}},
-  SHORTAUTHOR    = {DJI},
-  TITLE          = {Title},
-  DATE           = {1984},
-}
-
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % bei allen booklet-Quellen wirds nicht kursiv gemacht
 
@@ -136,7 +22,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @inbook{Def_Aggression_1939,
   author         = {Dollard, J. and Doob, L. W. and Miller, N. E. and Mowrer, O. H. and Sears, R. R.},
   chapter        = {Definitions},
-  pages          = {1--27},
+  pages          = {1-27},
   publisher      = {New Haven: Yale University-Press},
   title          = {Frustration and Aggression},
   year           = {1939}
@@ -264,7 +150,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   url           = {https://www.additudemag.com/impulsive-aggression-clinicians-guide/},
 }
 
-@booklet{impulsive_aggro,
+@misc{impulsive_aggro,
   author        = {AlleyDog.com},
   title         = {Impulsive Aggression},
   year          = {2022},
