--- a/2 Theorie/2.1.3 Gewaltmythen.tex
+++ b/2 Theorie/2.1.3 Gewaltmythen.tex
@@ -2,7 +2,7 @@
 Die Art und Weise, wie Opfer wahrgenommen werden, spielt eine große Rolle für die gesellschaftliche und die eigene Reaktion auf häusliche Gewalt. Ob und wie die Öffentlichkeit und das Opfer auf einen Fall von häuslicher Gewalt reagiert, hängt stark von der gesellschaftlichen Wahrnehmung und Einstellung diesem Thema gegenüber ab \parencite{Labelingtheory_plus}. Diese Einstellungen werden von stereotypischen Vorstellungen über häusliche Gewalt geprägt. \textcite{DVMAS_Peters} nennt diese falschen Einstellungen und Vorstellungen \textit{Mythen häuslicher Gewalt}, die die Schwere physischer Aggression versuchen zu verringern, abzustreiten oder versuchen, Rechtfertigungsgründe dafür vorzubringen. Mythen häuslicher Gewalt senken die soziale Hilfestellung. Durch sie verändert sich die gewaltbetroffene Person von einem unschuldigen Opfer zu einer Person, die es bewusst oder unbewusst wollte, misshandelt zu werden. Demzufolge ist das Opfer kein Opfer mehr, denn die Person hätte die Gewalt vermeiden können, oder hat den Partner willentlich provoziert \parencite{DVMAS_Peters}. Durch ein solches Bild der Opfer häuslicher Gewalt wird die Schwere dieser Tat minimiert, wird das Verhalten der Täter bagatellisiert. Dieser Bagatellisierung reduziert die Hemmschwelle zur Ausübung von Gewalt, sodass die Häufigkeit gewalttätigen Verhalten begünstigt wird. Des Weiteren prägen sie, wie zu Beginn des Kapitels bereits angedeutet, auch das Opfer. Ein falsches Unrechtempfinden sowohl beim Opfer selbst als auch bei weiten Teilen der Gesellschaft macht es dem Opfer schwer, Hilfe bei Familie, Nachbarn oder öffentlichen Institutionen zu suchen. Sie denken selbst, der Verursacher ihrer Lage zu sein, oder vermuten, dass außenstehende Personen sie nicht verstehen und somit auch die Hilfe unterlassen würde \parencite{Gewaltmythen}.
 
 \subsubsection{Vergewaltigungsmythen}  \label{2.1.3.1}
-Vergewaltigungmythen, sind wie die der häuslichen Gewalt stark von einem patriachalem System und einer solchen Denkweise geprägt. Sie umfassen Überzeugungen über die Ursachen und den damit verbundenen Kontext, wie auch die Folgen der Tat. Sie konstruieren ein Bild des Täters und des Opfers, durch das die sexualisierte Gewalt, häufig ausgehend von Männern und gerichtet auf Frauen, geleugnet und verharmlost wird \parencite{Vergewaltigung_Bohner_1996}. Die Absichten von Vergewaltigungmythen sind denen der häuslichen Gewalt sehr ähnlich \parencite{DVMAS_Peters}. Sie rechtfertigen die Tat, entschuldigen den Täter und schreiben dem Opfer Mitverantwortung zu \parencite{Vergewaltigung_Boris_2004}. Beispiele wie \enquote{Sie hat es durch ihr Aussehen oder Verhalten provoziert.} oder \enquote{Wenn die Frau es nicht will, kann sie sich doch wehren. Wenn sie es nicht tut, dann will sie es ja eigentlich.} \parencite{Vergewaltigung_Boris_2004}.
+Vergewaltigungmythen, sind wie die der häuslichen Gewalt stark von einem patriachalem System und einer solchen Denkweise geprägt. Sie umfassen Überzeugungen über die Ursachen und den damit verbundenen Kontext sowieauch die Folgen der Tat. Sie konstruieren ein Bild des Täters und des Opfers, durch das die sexualisierte Gewalt, häufig ausgehend von Männern und gerichtet auf Frauen, geleugnet und verharmlost wird \parencite{Vergewaltigung_Bohner_1996}. Die Absichten von Vergewaltigungmythen sind denen der häuslichen Gewalt sehr ähnlich \parencite{DVMAS_Peters}. Sie rechtfertigen die Tat, entschuldigen den Täter und schreiben dem Opfer Mitverantwortung zu \parencite{Vergewaltigung_Boris_2004}. Beispiele wie \enquote{Sie hat es durch ihr Aussehen oder Verhalten provoziert.} oder \enquote{Wenn die Frau es nicht will, kann sie sich doch wehren. Wenn sie es nicht tut, dann will sie es ja eigentlich.} \parencite{Vergewaltigung_Boris_2004}.
 
 Diese Einstellungen und Überzeugungen klassifizierte \textcite{Vergewaltigung_Typen_Burt_1991} in vier Typen. Der erste Typ behauptet, \textit{es sei nichts passiert}. Die sexuelle Interaktion von Täter und Opfer wird dadurch abgestritten. Des Weiteren schließt dieser Typ nur gewisse Handlungen unter den Begriff der Vergewaltigung ein. 
 
